--- a/res/values-km/strings.xml
+++ b/res/values-km/strings.xml
@@ -411,8 +411,7 @@
     <string name="security_settings_face_watch_preference_summary" msgid="5817376447253802793">"បានបញ្ចូលមុខ និង <xliff:g id="WATCH">%s</xliff:g>"</string>
     <string name="security_settings_fingerprint_single_face_watch_preference_summary" msgid="764951912234638192">"បានបញ្ចូលមុខ ស្នាមម្រាមដៃ និង <xliff:g id="WATCH">%s</xliff:g>"</string>
     <string name="security_settings_fingerprint_multiple_face_watch_preference_summary" msgid="3935500711366489380">"បានបញ្ចូលមុខ ស្នាមម្រាមដៃ និង <xliff:g id="WATCH">%s</xliff:g>"</string>
-    <!-- no translation found for mandatory_biometrics_prompt_description (8928849367818726432) -->
-    <skip />
+    <string name="mandatory_biometrics_prompt_description" msgid="8928849367818726432">"ការពិនិត្យអត្តសញ្ញាណត្រូវបានបើក"</string>
     <string name="security_settings_remoteauth_preference_title" msgid="8319680328086089533">"ការដោះសោពីចម្ងាយតាមកម្មវិធីផ្ទៀងផ្ទាត់"</string>
     <string name="security_settings_remoteauth_preference_summary" msgid="1507004469316635196">"បានបញ្ចូលនាឡិកាហើយ"</string>
     <string name="security_settings_remoteauth_enroll_introduction_title" msgid="2151004795778999671">"រៀបចំនាឡិការបស់អ្នក"</string>
@@ -3337,6 +3336,10 @@
     <string name="spatial_summary_on_two" msgid="4526919818832483883">"បើក / <xliff:g id="OUTPUT_DEVICE_0">%1$s</xliff:g> និង <xliff:g id="OUTPUT_DEVICE_1">%2$s</xliff:g>"</string>
     <string name="spatial_audio_footer_title" msgid="8775010547623606088">"អ្នកក៏​អាច​បើក​សំឡេងលំហ​សម្រាប់ឧបករណ៍​ប៊្លូធូសបាន​ដែរ។"</string>
     <string name="spatial_audio_footer_learn_more_text" msgid="3826811708094366301">"ការកំណត់​ឧបករណ៍ដែល​បានភ្ជាប់"</string>
+    <string name="spatial_audio_multi_toggle_title" msgid="6175786400035541273">"សំឡេងលំហ"</string>
+    <string name="spatial_audio_multi_toggle_off" msgid="2086359413991193164">"បិទ"</string>
+    <string name="spatial_audio_multi_toggle_on" msgid="2988769235357633788">"បិទ"</string>
+    <string name="spatial_audio_multi_toggle_head_tracking_on" msgid="861779551619033627">"បិទ"</string>
     <string name="zen_mode_settings_schedules_summary" msgid="2047688589286811617">"{count,plural, =0{គ្មាន}=1{បានកំណត់​កាលវិភាគ 1}other{បានកំណត់​កាលវិភាគ #}}"</string>
     <string name="zen_mode_settings_title" msgid="682676757791334259">"កុំ​រំខាន"</string>
     <string name="zen_modes_list_title" msgid="5138745349253275428">"ម៉ូដអាទិភាព"</string>
@@ -3634,7 +3637,11 @@
     <string name="nls_feature_reply_summary" msgid="4492543411395565556">"វាអាចឆ្លើយតបសារ និងធ្វើសកម្មភាពលើប៊ូតុងនៅក្នុងការជូនដំណឹង រួមទាំងផ្អាក ឬច្រានចោលការជូនដំណឹង និងទទួល​ទូរសព្ទផងដែរ។"</string>
     <string name="nls_feature_settings_title" msgid="8208164329853194414">"ប្ដូរ​ការកំណត់"</string>
     <string name="nls_feature_settings_summary" msgid="3770028705648985689">"វាអាចបើក ឬបិទមុខងារកុំ​រំខាន និងប្ដូរការកំណត់​ដែលពាក់ព័ន្ធ។"</string>
+    <!-- no translation found for nls_feature_modes_settings_summary (6678225711796413093) -->
+    <skip />
     <string name="notification_listener_disable_warning_summary" msgid="8373396293802088961">"ប្រសិនបើអ្នកបិទការចូលប្រើការជូនដំណឹង​សម្រាប់ <xliff:g id="NOTIFICATION_LISTENER_NAME">%1$s</xliff:g> នោះការចូលប្រើមុខងារ​កុំរំខានក៏អាចនឹងត្រូវបានបិទដែរ។"</string>
+    <!-- no translation found for notification_listener_disable_modes_warning_summary (2985662620702322307) -->
+    <skip />
     <string name="notification_listener_disable_warning_confirm" msgid="841492108402184976">"បិទ"</string>
     <string name="notification_listener_disable_warning_cancel" msgid="8802784105045594324">"បោះបង់"</string>
     <string name="notif_type_ongoing" msgid="135675014223627555">"ក្នុងពេលជាក់​ស្ដែង"</string>
@@ -3695,6 +3702,12 @@
     <string name="manage_zen_access_title" msgid="1562322900340107269">"ចូលដំណើរការមុខងារកុំរំខាន"</string>
     <string name="zen_access_detail_switch" msgid="4183681772666138993">"អនុញ្ញាតមុខងារកុំរំខាន"</string>
     <string name="zen_access_empty_text" msgid="3779921853282293080">"គ្មានកម្មវិធីបានដំឡើងណាមួយបានស្នើការចូលដំណើរការមុខងារកុំរំខានទេ"</string>
+    <!-- no translation found for manage_zen_modes_access_title (7568322052929075783) -->
+    <skip />
+    <!-- no translation found for zen_modes_access_detail_switch (19797205786545052) -->
+    <skip />
+    <!-- no translation found for zen_modes_access_empty_text (6393146155692575897) -->
+    <skip />
     <string name="app_notifications_off_desc" msgid="2484843759466874201">"អ្នកមិនបានអនុញ្ញាត​ការជូនដំណឹង​ពីកម្មវិធីនេះទេ"</string>
     <string name="channel_notifications_off_desc" msgid="6202042207121633488">"តាមសំណើ​របស់អ្នក ប្រព័ន្ធ​ប្រតិបត្តិការ Android កំពុង​ទប់ស្កាត់​ប្រភេទនៃការជូនដំណឹង​​នេះ​មិន​ឱ្យ​បង្ហាញ​នៅលើ​ឧបករណ៍​នេះទេ"</string>
     <string name="channel_group_notifications_off_desc" msgid="9096417708500595424">"តាមសំណើ​របស់អ្នក ប្រព័ន្ធ​ប្រតិបត្តិការ Android កំពុង​ទប់ស្កាត់​ក្រុមនៃ​ការជូនដំណឹង​នេះ​មិន​ឱ្យ​បង្ហាញ​នៅលើ​ឧបករណ៍​នេះទេ"</string>
@@ -3877,6 +3890,22 @@
     <string name="zen_mode_blurb_theater" msgid="2999237960059524225">"បំបាត់គ្រប់កត្តារំខានដើម្បីទទួលបានកន្លែងស្ងប់ស្ងាត់"</string>
     <string name="zen_mode_blurb_managed" msgid="5473921634985032149">"កំណត់បទពិសោធប្រើប្រាស់ និងការកំណត់ឧបករណ៍ឱ្យមានលក្ខណៈផ្ទាល់ខ្លួនសម្រាប់អ្នកប្រើប្រាស់"</string>
     <string name="zen_mode_blurb_generic" msgid="3041601339807075625">"បន្ថយការរំខានឱ្យនៅតិចបំផុត ដោយអនុញ្ញាតឱ្យតែមនុស្ស និងកម្មវិធីសំខាន់ៗទាក់ទងទៅអ្នក"</string>
+    <!-- no translation found for zen_mode_inspiration_schedule_time (5596540503159096153) -->
+    <skip />
+    <!-- no translation found for zen_mode_inspiration_schedule_calendar (3678727180860212700) -->
+    <skip />
+    <!-- no translation found for zen_mode_inspiration_bedtime (6294822414181670666) -->
+    <skip />
+    <!-- no translation found for zen_mode_inspiration_driving (8237825783857483135) -->
+    <skip />
+    <!-- no translation found for zen_mode_inspiration_immersive (4062437428955782933) -->
+    <skip />
+    <!-- no translation found for zen_mode_inspiration_theater (9194190183262761230) -->
+    <skip />
+    <!-- no translation found for zen_mode_inspiration_managed (4607010392213773917) -->
+    <skip />
+    <!-- no translation found for zen_mode_inspiration_generic (9072064817144550243) -->
+    <skip />
     <string name="warning_button_text" msgid="1274234338874005639">"ការព្រមាន"</string>
     <string name="suggestion_button_close" msgid="6865170855573283759">"បិទ"</string>
     <string name="device_feedback" msgid="5351614458411688608">"ផ្ដល់​មតិ​កែលម្អ​អំពី​ឧបករណ៍​នេះ"</string>
@@ -4077,6 +4106,14 @@
     <string name="zen_access_disabled_package_warning" msgid="6565908224294537889">"ត្រូវបើកជានិច្ច ដោយសារតែការចូលដំណើរការការជូនដំណឹងបានបើក"</string>
     <string name="zen_access_revoke_warning_dialog_title" msgid="7377261509261811449">"ដកសិទ្ធិចូលប្រើមុខងារកុំរំខានសម្រាប់ <xliff:g id="APP">%1$s</xliff:g> ឬ?"</string>
     <string name="zen_access_revoke_warning_dialog_summary" msgid="8689801842914183595">"វិធានទាំងអស់របស់មុខងារកុំរំខានដែលបានបង្កើតដោយកម្មវិធីនេះនឹងត្រូវដកចេញ។"</string>
+    <!-- no translation found for zen_modes_access_warning_dialog_title (2072265702931309138) -->
+    <skip />
+    <!-- no translation found for zen_modes_access_warning_dialog_summary (2351013300727701273) -->
+    <skip />
+    <!-- no translation found for zen_modes_access_revoke_warning_dialog_title (2703602440018176310) -->
+    <skip />
+    <!-- no translation found for zen_modes_access_revoke_warning_dialog_summary (4669243849023204217) -->
+    <skip />
     <string name="ignore_optimizations_on" msgid="6865583039303804932">"កុំបង្កើនប្រសិទ្ធភាព"</string>
     <string name="ignore_optimizations_off" msgid="9186557038453586295">"បង្កើនប្រសិទ្ធភាព"</string>
     <string name="ignore_optimizations_on_desc" msgid="1280043916460939932">"អាចស៊ីថ្មលឿនជាងមុន។ កម្មវិធី​នឹងមិន​មានការ​​​ដាក់​កំហិតចំពោះ​ការ​ប្រើប្រាស់​ថ្ម​ផ្ទៃ​ខាងក្រោយ​ទៀតទេ។"</string>
@@ -5327,7 +5364,7 @@
     <string name="audio_sharing_switch_title" msgid="7052827328670825701">"ចែករំលែកសំឡេង"</string>
     <string name="calls_and_alarms_device_title" msgid="6993559028175454198">"ការហៅទូរសព្ទ និងម៉ោងរោទ៍"</string>
     <string name="audio_sharing_description" msgid="1660255584523640628">"ឱ្យអ្នកផ្សេងស្ដាប់មេឌៀរបស់អ្នកព្រមគ្នាជាមួយអ្នក។ អ្នកស្ដាប់ត្រូវមានកាស LE Audio ផ្ទាល់ខ្លួនរបស់ពួកគេ។"</string>
-    <string name="audio_sharing_device_group_title" msgid="3019780581643956943">"ឧបករណ៍ផ្ទុកទិន្នន័យសកម្ម"</string>
+    <string name="audio_sharing_device_group_title" msgid="3019780581643956943">"ឧបករណ៍មេឌៀសកម្ម"</string>
     <string name="audio_sharing_call_audio_title" msgid="7978867452289583929">"សំឡេង​នៃ​ការហៅ​ទូរសព្ទ"</string>
     <string name="audio_sharing_call_audio_description" msgid="6573621048260616924">"ចាក់តែនៅលើ <xliff:g id="DEVICE_NAME">%1$s</xliff:g> ប៉ុណ្ណោះ"</string>
     <string name="audio_sharing_test_sound_title" msgid="6438868185641027763">"ចាក់សំឡេងសាកល្បង"</string>
