--- a/res/values-mr/strings.xml
+++ b/res/values-mr/strings.xml
@@ -411,8 +411,7 @@
     <string name="security_settings_face_watch_preference_summary" msgid="5817376447253802793">"चेहरा आणि <xliff:g id="WATCH">%s</xliff:g> जोडले"</string>
     <string name="security_settings_fingerprint_single_face_watch_preference_summary" msgid="764951912234638192">"चेहरा, फिंगरप्रिंट आणि <xliff:g id="WATCH">%s</xliff:g> जोडले"</string>
     <string name="security_settings_fingerprint_multiple_face_watch_preference_summary" msgid="3935500711366489380">"चेहरा, फिंगरप्रिंट आणि <xliff:g id="WATCH">%s</xliff:g> जोडले"</string>
-    <!-- no translation found for mandatory_biometrics_prompt_description (8928849367818726432) -->
-    <skip />
+    <string name="mandatory_biometrics_prompt_description" msgid="8928849367818726432">"ओळख तपासणी सुरू आहे"</string>
     <string name="security_settings_remoteauth_preference_title" msgid="8319680328086089533">"Remote Authenticator अनलॉक करा"</string>
     <string name="security_settings_remoteauth_preference_summary" msgid="1507004469316635196">"वॉच जोडले आहे"</string>
     <string name="security_settings_remoteauth_enroll_introduction_title" msgid="2151004795778999671">"तुमचे वॉच सेट करा"</string>
@@ -3337,6 +3336,10 @@
     <string name="spatial_summary_on_two" msgid="4526919818832483883">"सुरू आहे / <xliff:g id="OUTPUT_DEVICE_0">%1$s</xliff:g> आणि <xliff:g id="OUTPUT_DEVICE_1">%2$s</xliff:g>"</string>
     <string name="spatial_audio_footer_title" msgid="8775010547623606088">"तुम्ही ब्लूटूथ डिव्‍हाइससाठी स्पेशियल ऑडियो देखील सुरू करू शकता."</string>
     <string name="spatial_audio_footer_learn_more_text" msgid="3826811708094366301">"कनेक्‍ट केलेली डिव्हाइस सेटिंग्ज"</string>
+    <string name="spatial_audio_multi_toggle_title" msgid="6175786400035541273">"स्पेशियल ऑडिओ"</string>
+    <string name="spatial_audio_multi_toggle_off" msgid="2086359413991193164">"बंद आहे"</string>
+    <string name="spatial_audio_multi_toggle_on" msgid="2988769235357633788">"बंद आहे"</string>
+    <string name="spatial_audio_multi_toggle_head_tracking_on" msgid="861779551619033627">"बंद आहे"</string>
     <string name="zen_mode_settings_schedules_summary" msgid="2047688589286811617">"{count,plural, =0{None}=1{एक शेड्युल सेट केले}other{# शेड्युल सेट केली}}"</string>
     <string name="zen_mode_settings_title" msgid="682676757791334259">"व्यत्यय आणू नका"</string>
     <string name="zen_modes_list_title" msgid="5138745349253275428">"प्राधान्य मोड"</string>
@@ -3634,7 +3637,11 @@
     <string name="nls_feature_reply_summary" msgid="4492543411395565556">"ते मेसेजना उत्तर देऊ शकते आणि सूचना स्नूझ करणे किंवा डिसमिस करणे व कॉलना उत्तर देणे यांच्या समावेशसह सूचनांमधील बटणांवर कृती करू शकते."</string>
     <string name="nls_feature_settings_title" msgid="8208164329853194414">"सेटिंग्ज बदला"</string>
     <string name="nls_feature_settings_summary" msgid="3770028705648985689">"ते व्यत्यय आणू नका हे सुरू किंवा बंद करू शकते आणि संबंधित सेटिंग्ज बदलू शकते."</string>
+    <!-- no translation found for nls_feature_modes_settings_summary (6678225711796413093) -->
+    <skip />
     <string name="notification_listener_disable_warning_summary" msgid="8373396293802088961">"तुम्ही <xliff:g id="NOTIFICATION_LISTENER_NAME">%1$s</xliff:g> साठी सूचनांमधील अ‍ॅक्सेस बंद केल्यास, व्यत्यय आणू नका मधील अ‍ॅक्सेसदेखील बंद केला जाऊ शकतो."</string>
+    <!-- no translation found for notification_listener_disable_modes_warning_summary (2985662620702322307) -->
+    <skip />
     <string name="notification_listener_disable_warning_confirm" msgid="841492108402184976">"बंद करा"</string>
     <string name="notification_listener_disable_warning_cancel" msgid="8802784105045594324">"रद्द करा"</string>
     <string name="notif_type_ongoing" msgid="135675014223627555">"रीअल-टाइम"</string>
@@ -3695,6 +3702,12 @@
     <string name="manage_zen_access_title" msgid="1562322900340107269">"व्यत्यय आणू नका अ‍ॅक्सेस"</string>
     <string name="zen_access_detail_switch" msgid="4183681772666138993">"व्यत्यय आणू नका ची अनुमती द्या"</string>
     <string name="zen_access_empty_text" msgid="3779921853282293080">"कोणत्याही इंस्टॉल केलेल्या ॲप्सने व्यत्यय आणू नका प्रवेशाची विनंती केली नाही"</string>
+    <!-- no translation found for manage_zen_modes_access_title (7568322052929075783) -->
+    <skip />
+    <!-- no translation found for zen_modes_access_detail_switch (19797205786545052) -->
+    <skip />
+    <!-- no translation found for zen_modes_access_empty_text (6393146155692575897) -->
+    <skip />
     <string name="app_notifications_off_desc" msgid="2484843759466874201">"तुम्ही या अ‍ॅपमधील नोटिफिकेशनना अनुमती दिलेली नाही"</string>
     <string name="channel_notifications_off_desc" msgid="6202042207121633488">"तुमच्या विनंतीनुसार Android, सूचनांच्या या वर्गवारीचे या डिव्हाइसवर दिसणे ब्लॉक करत आहे"</string>
     <string name="channel_group_notifications_off_desc" msgid="9096417708500595424">"तुमच्या विनंतीनुसार Android, सूचनांच्या या समूहाचे या डिव्हाइसवर दिसणे ब्लॉक करत आहे"</string>
@@ -3877,6 +3890,22 @@
     <string name="zen_mode_blurb_theater" msgid="2999237960059524225">"शांत वातावरणासाठी सर्व व्यत्यय दूर करा"</string>
     <string name="zen_mode_blurb_managed" msgid="5473921634985032149">"वेगवेगळ्या वापरकर्त्यांसाठी डिव्हाइस अनुभव आणि सेटिंग्ज पर्सनलाइझ करा"</string>
     <string name="zen_mode_blurb_generic" msgid="3041601339807075625">"फक्त महत्त्वाच्या व्यक्ती आणि ॲप्सना तुमच्याशी संपर्क साधण्याची अनुमती देऊन व्यत्यय कमी करा"</string>
+    <!-- no translation found for zen_mode_inspiration_schedule_time (5596540503159096153) -->
+    <skip />
+    <!-- no translation found for zen_mode_inspiration_schedule_calendar (3678727180860212700) -->
+    <skip />
+    <!-- no translation found for zen_mode_inspiration_bedtime (6294822414181670666) -->
+    <skip />
+    <!-- no translation found for zen_mode_inspiration_driving (8237825783857483135) -->
+    <skip />
+    <!-- no translation found for zen_mode_inspiration_immersive (4062437428955782933) -->
+    <skip />
+    <!-- no translation found for zen_mode_inspiration_theater (9194190183262761230) -->
+    <skip />
+    <!-- no translation found for zen_mode_inspiration_managed (4607010392213773917) -->
+    <skip />
+    <!-- no translation found for zen_mode_inspiration_generic (9072064817144550243) -->
+    <skip />
     <string name="warning_button_text" msgid="1274234338874005639">"चेतावणी"</string>
     <string name="suggestion_button_close" msgid="6865170855573283759">"बंद करा"</string>
     <string name="device_feedback" msgid="5351614458411688608">"या डिव्हाइसबद्दल फीडबॅक पाठवा"</string>
@@ -4077,6 +4106,14 @@
     <string name="zen_access_disabled_package_warning" msgid="6565908224294537889">"सूचना अ‍ॅक्सेस सुरू असल्याने सुरू केलेले ठेवणे आवश्यक आहे"</string>
     <string name="zen_access_revoke_warning_dialog_title" msgid="7377261509261811449">"<xliff:g id="APP">%1$s</xliff:g> साठी व्यत्यय आणू नका मध्‍ये प्रवेश करणे रद्द करायचे?"</string>
     <string name="zen_access_revoke_warning_dialog_summary" msgid="8689801842914183595">"या ॲपने तयार केलेले सर्व व्यत्यय आणू नका नियम काढले जातील."</string>
+    <!-- no translation found for zen_modes_access_warning_dialog_title (2072265702931309138) -->
+    <skip />
+    <!-- no translation found for zen_modes_access_warning_dialog_summary (2351013300727701273) -->
+    <skip />
+    <!-- no translation found for zen_modes_access_revoke_warning_dialog_title (2703602440018176310) -->
+    <skip />
+    <!-- no translation found for zen_modes_access_revoke_warning_dialog_summary (4669243849023204217) -->
+    <skip />
     <string name="ignore_optimizations_on" msgid="6865583039303804932">"ऑप्टिमाइझ करू नका"</string>
     <string name="ignore_optimizations_off" msgid="9186557038453586295">"Optimize"</string>
     <string name="ignore_optimizations_on_desc" msgid="1280043916460939932">"तुमची बॅटरी खूप लवकर संपवू शकते. यापुढे अ‍ॅप बॅकग्राउंड बॅटरी वापरण्यापासून प्रतिबंधित नसेल."</string>
