--- a/res/values-ar/strings.xml
+++ b/res/values-ar/strings.xml
@@ -411,8 +411,7 @@
     <string name="security_settings_face_watch_preference_summary" msgid="5817376447253802793">"تمت إضافة وجه و\"<xliff:g id="WATCH">%s</xliff:g>\"."</string>
     <string name="security_settings_fingerprint_single_face_watch_preference_summary" msgid="764951912234638192">"تمت إضافة وجه وبصمة إصبع و\"<xliff:g id="WATCH">%s</xliff:g>\"."</string>
     <string name="security_settings_fingerprint_multiple_face_watch_preference_summary" msgid="3935500711366489380">"تمت إضافة وجه وبصمات أصابع و\"<xliff:g id="WATCH">%s</xliff:g>\"."</string>
-    <!-- no translation found for mandatory_biometrics_prompt_description (8928849367818726432) -->
-    <skip />
+    <string name="mandatory_biometrics_prompt_description" msgid="8928849367818726432">"ميزة \"التحقّق من الهوية\" مفعَّلة"</string>
     <string name="security_settings_remoteauth_preference_title" msgid="8319680328086089533">"‏فتح قفل Remote Authenticator"</string>
     <string name="security_settings_remoteauth_preference_summary" msgid="1507004469316635196">"تمت إضافة الساعة"</string>
     <string name="security_settings_remoteauth_enroll_introduction_title" msgid="2151004795778999671">"ضبط إعدادات ساعتك"</string>
@@ -3337,6 +3336,10 @@
     <string name="spatial_summary_on_two" msgid="4526919818832483883">"مفعّل / <xliff:g id="OUTPUT_DEVICE_0">%1$s</xliff:g> و<xliff:g id="OUTPUT_DEVICE_1">%2$s</xliff:g>"</string>
     <string name="spatial_audio_footer_title" msgid="8775010547623606088">"يمكنك أيضًا تفعيل ميزة \"الصوت المكاني\" للأجهزة التي تتضمّن بلوتوث."</string>
     <string name="spatial_audio_footer_learn_more_text" msgid="3826811708094366301">"إعدادات الأجهزة المتصلة"</string>
+    <string name="spatial_audio_multi_toggle_title" msgid="6175786400035541273">"الصوت المكاني"</string>
+    <string name="spatial_audio_multi_toggle_off" msgid="2086359413991193164">"غير مفعَّلة"</string>
+    <string name="spatial_audio_multi_toggle_on" msgid="2988769235357633788">"غير مفعَّلة"</string>
+    <string name="spatial_audio_multi_toggle_head_tracking_on" msgid="861779551619033627">"غير مفعَّلة"</string>
     <string name="zen_mode_settings_schedules_summary" msgid="2047688589286811617">"{count,plural, =0{ما من جداول زمنية}=1{تم ضبط جدول زمني واحد}two{تم ضبط جدولين زمنيين}few{تم ضبط # جداول زمنية}many{تم ضبط # جدولاً زمنيًا}other{تم ضبط # جدول زمني}}"</string>
     <string name="zen_mode_settings_title" msgid="682676757791334259">"وضع \"عدم الإزعاج\""</string>
     <string name="zen_modes_list_title" msgid="5138745349253275428">"الأوضاع ذات الأولوية"</string>
@@ -3634,7 +3637,11 @@
     <string name="nls_feature_reply_summary" msgid="4492543411395565556">"يمكنه الردّ على الرسائل واتخاذ إجراءات من خلال الأزرار في الإشعارات، بما في ذلك تأجيل الإشعارات أو إغلاقها والردّ على المكالمات."</string>
     <string name="nls_feature_settings_title" msgid="8208164329853194414">"تغيير الإعدادات"</string>
     <string name="nls_feature_settings_summary" msgid="3770028705648985689">"يمكنه تفعيل ميزة \"عدم الإزعاج\" أو إيقافها وتغيير الإعدادات ذات الصلة."</string>
+    <!-- no translation found for nls_feature_modes_settings_summary (6678225711796413093) -->
+    <skip />
     <string name="notification_listener_disable_warning_summary" msgid="8373396293802088961">"في حال إيقاف وصول \"<xliff:g id="NOTIFICATION_LISTENER_NAME">%1$s</xliff:g>\" إلى الإشعارات، قد يتم إيقاف الوصول إلى ميزة \"عدم الإزعاج\" أيضًا."</string>
+    <!-- no translation found for notification_listener_disable_modes_warning_summary (2985662620702322307) -->
+    <skip />
     <string name="notification_listener_disable_warning_confirm" msgid="841492108402184976">"إيقاف"</string>
     <string name="notification_listener_disable_warning_cancel" msgid="8802784105045594324">"إلغاء"</string>
     <string name="notif_type_ongoing" msgid="135675014223627555">"الوقت الفعلي"</string>
@@ -3695,6 +3702,12 @@
     <string name="manage_zen_access_title" msgid="1562322900340107269">"الوصول إلى إعداد \"عدم الإزعاج\""</string>
     <string name="zen_access_detail_switch" msgid="4183681772666138993">"السماح بميزة \"عدم الإزعاج\""</string>
     <string name="zen_access_empty_text" msgid="3779921853282293080">"لم تطلّب أي تطبيقات مثبّتة الإذن بالوصول إلى إعداد \"عدم الإزعاج\""</string>
+    <!-- no translation found for manage_zen_modes_access_title (7568322052929075783) -->
+    <skip />
+    <!-- no translation found for zen_modes_access_detail_switch (19797205786545052) -->
+    <skip />
+    <!-- no translation found for zen_modes_access_empty_text (6393146155692575897) -->
+    <skip />
     <string name="app_notifications_off_desc" msgid="2484843759466874201">"لم تسمح بالإشعارات من هذا التطبيق"</string>
     <string name="channel_notifications_off_desc" msgid="6202042207121633488">"‏بناءً على طلبك، يمنع Android ظهور هذه الفئة من الإشعارات على هذا الجهاز"</string>
     <string name="channel_group_notifications_off_desc" msgid="9096417708500595424">"‏بناءً على طلبك، يمنع Android ظهور هذه المجموعة من الإشعارات على هذا الجهاز."</string>
@@ -3877,6 +3890,22 @@
     <string name="zen_mode_blurb_theater" msgid="2999237960059524225">"يمكن الحدّ من جميع مصادر التشتيت والاستمتاع بالهدوء"</string>
     <string name="zen_mode_blurb_managed" msgid="5473921634985032149">"يمكن تخصيص تجارب استخدام الجهاز وإعداداته بما يلائم اهتمامات المستخدمين المختلفة"</string>
     <string name="zen_mode_blurb_generic" msgid="3041601339807075625">"يمكن الحدّ من مصادر الإزعاج من خلال السماح للأشخاص المهمّين والتطبيقات الضرورية بالوصول إليك"</string>
+    <!-- no translation found for zen_mode_inspiration_schedule_time (5596540503159096153) -->
+    <skip />
+    <!-- no translation found for zen_mode_inspiration_schedule_calendar (3678727180860212700) -->
+    <skip />
+    <!-- no translation found for zen_mode_inspiration_bedtime (6294822414181670666) -->
+    <skip />
+    <!-- no translation found for zen_mode_inspiration_driving (8237825783857483135) -->
+    <skip />
+    <!-- no translation found for zen_mode_inspiration_immersive (4062437428955782933) -->
+    <skip />
+    <!-- no translation found for zen_mode_inspiration_theater (9194190183262761230) -->
+    <skip />
+    <!-- no translation found for zen_mode_inspiration_managed (4607010392213773917) -->
+    <skip />
+    <!-- no translation found for zen_mode_inspiration_generic (9072064817144550243) -->
+    <skip />
     <string name="warning_button_text" msgid="1274234338874005639">"تحذير"</string>
     <string name="suggestion_button_close" msgid="6865170855573283759">"إغلاق"</string>
     <string name="device_feedback" msgid="5351614458411688608">"إرسال ملاحظات حول هذا الجهاز"</string>
@@ -4077,6 +4106,14 @@
     <string name="zen_access_disabled_package_warning" msgid="6565908224294537889">"يجب أن يظل قيد التفعيل نظرًا لأن الوصول إلى الإشعارات قيد التفعيل"</string>
     <string name="zen_access_revoke_warning_dialog_title" msgid="7377261509261811449">"هل تريد إبطال إمكانية وصول تطبيق \"<xliff:g id="APP">%1$s</xliff:g>\" إلى إعداد \"عدم الإزعاج\"؟"</string>
     <string name="zen_access_revoke_warning_dialog_summary" msgid="8689801842914183595">"ستتم إزالة كل قواعد \"عدم الإزعاج\" التي أنشأها هذا التطبيق."</string>
+    <!-- no translation found for zen_modes_access_warning_dialog_title (2072265702931309138) -->
+    <skip />
+    <!-- no translation found for zen_modes_access_warning_dialog_summary (2351013300727701273) -->
+    <skip />
+    <!-- no translation found for zen_modes_access_revoke_warning_dialog_title (2703602440018176310) -->
+    <skip />
+    <!-- no translation found for zen_modes_access_revoke_warning_dialog_summary (4669243849023204217) -->
+    <skip />
     <string name="ignore_optimizations_on" msgid="6865583039303804932">"عدم تحسين"</string>
     <string name="ignore_optimizations_off" msgid="9186557038453586295">"تحسين"</string>
     <string name="ignore_optimizations_on_desc" msgid="1280043916460939932">"يمكن أن يستنزف ذلك طاقة بطاريتك بسرعة. ولن يتم منع التطبيق بعد الآن من استهلاك البطارية في الخلفية."</string>
@@ -4857,8 +4894,8 @@
     <string name="network_connection_request_dialog_showall" msgid="6392059758456994944">"عرض الكل"</string>
     <string name="network_connection_searching_message" msgid="8521819623516926482">"جارٍ البحث عن جهاز…"</string>
     <string name="network_connection_connecting_message" msgid="433189540877274889">"جارٍ الاتصال بجهاز…"</string>
-    <string name="bluetooth_left_name" msgid="7440064067910080502">"جهاز البلوتوث الأيسر"</string>
-    <string name="bluetooth_right_name" msgid="7588088072444124949">"جهاز البلوتوث الأيمن"</string>
+    <string name="bluetooth_left_name" msgid="7440064067910080502">"السمّاعة اليسرى"</string>
+    <string name="bluetooth_right_name" msgid="7588088072444124949">"السمّاعة اليمنى"</string>
     <string name="bluetooth_middle_name" msgid="3909371955137442319">"الحافظة"</string>
     <string name="bluetooth_header_battery_content_description" msgid="3804237436331504879">"البطارية"</string>
     <string name="settings_panel_title" msgid="346363079938069215">"لوحة الإعدادات"</string>
@@ -5105,7 +5142,7 @@
     <string name="show_clip_access_notification_summary" msgid="474090757777203207">"إظهار رسالة عندما يصل التطبيق إلى نص أو صور أو محتوى آخر تم نسخه."</string>
     <string name="all_apps" msgid="3054120149509114789">"جميع التطبيقات"</string>
     <string name="request_manage_bluetooth_permission_dont_allow" msgid="8798061333407581300">"عدم السماح"</string>
-    <string name="uwb_settings_title" msgid="8578498712312002231">"‏النطاق الواسع جدًا (UWB)"</string>
+    <string name="uwb_settings_title" msgid="8578498712312002231">"‏النطاق الفائق العرض (UWB)"</string>
     <string name="uwb_settings_summary" msgid="3074271396764672268">"المساعدة في التعرّف على الموضع النسبي للأجهزة القريبة التي تستخدم النطاق الواسع جدًا"</string>
     <string name="uwb_settings_summary_airplane_mode" msgid="1328864888135086484">"يجب إيقاف وضع الطيران لاستخدام النطاق الواسع جدًا."</string>
     <string name="uwb_settings_summary_no_uwb_regulatory" msgid="3465456428217979428">"‏النطاق الفائق العرض (UWB) غير متاح في الموقع الجغرافي الحالي."</string>
@@ -5199,7 +5236,7 @@
     <string name="bluetooth_details_permissions_sync_title" msgid="7277580382321003521">"مزامنة الأذونات من الهاتف"</string>
     <string name="bluetooth_details_permissions_sync_summary" msgid="8125037984381432059">"امنح ساعتك أذونات التطبيقات نفسها التي سبق أن سمحت بها على هذا الهاتف."</string>
     <string name="bluetooth_details_audio_device_types_title" msgid="1889644189800180316">"نوع الجهاز السماعي"</string>
-    <string name="bluetooth_details_audio_device_type_unknown" msgid="5299284975435974206">"لم يتم التحديد"</string>
+    <string name="bluetooth_details_audio_device_type_unknown" msgid="5299284975435974206">"غير محدّد"</string>
     <string name="bluetooth_details_audio_device_type_speaker" msgid="3706227767994792124">"مكبّر صوت"</string>
     <string name="bluetooth_details_audio_device_type_headphones" msgid="7644588291215033798">"سماعات رأس"</string>
     <string name="bluetooth_details_audio_device_type_hearing_aid" msgid="6311786545025321187">"سماعة أذن طبية"</string>
@@ -5341,7 +5378,7 @@
     <string name="audio_sharing_stream_password_title" msgid="7026649168165764602">"كلمة المرور"</string>
     <string name="audio_sharing_stream_compatibility_title" msgid="5690947186724469918">"تحسين مدى التوافق"</string>
     <string name="audio_sharing_stream_compatibility_description" msgid="8170241188606110963">"المساعدة في ربط بعض الأجهزة، مثل سماعة الأذن الطبية، بجهازك من خلال تقليل جودة الصوت"</string>
-    <string name="audio_sharing_stream_compatibility_disabled_description" msgid="2586408353546825682">"يؤدي تحديد ذلك الخيار إلى إيقاف مشاركة الصوت لضبط توافُق الأجهزة"</string>
+    <string name="audio_sharing_stream_compatibility_disabled_description" msgid="2586408353546825682">"عند تفعيل هذا الخيار، ستتوقف مشاركة الصوت لضبط توافُق الأجهزة"</string>
     <string name="audio_sharing_nearby_audio_title" msgid="4795438407040677177">"الاستماع إلى الصوت القريب"</string>
     <string name="audio_sharing_footer_description" msgid="4786942197840271680">"‏تتوافق ميزة \"مشاركة الصوت\" مع تقنية Auracast™‎"</string>
     <string name="audio_sharing_stream_name_dialog_title" msgid="6706027295417556499">"اسم البث الصوتي"</string>
@@ -5357,7 +5394,7 @@
     <string name="audio_sharing_share_with_more_dialog_title" msgid="2840069088858232267">"مشاركة الصوت مع جهاز آخر"</string>
     <string name="audio_sharing_share_with_button_label" msgid="4146194430380237357">"المشاركة مع \"<xliff:g id="DEVICE_NAME">%1$s</xliff:g>\""</string>
     <string name="audio_sharing_close_button_label" msgid="2666534149100498574">"إغلاق"</string>
-    <string name="audio_sharing_dialog_connect_device_content" msgid="2873230647152283734">"يمكنك الربط بسماعات رأس أخرى متوافقة أو مشاركة اسم البث وكلمة المرور الخاصة به مع مستخدِم آخر"</string>
+    <string name="audio_sharing_dialog_connect_device_content" msgid="2873230647152283734">"يمكنك الاتصال بسماعات رأس أخرى متوافقة أو مشاركة اسم البث وكلمة المرور الخاصة به مع مستخدِم آخر"</string>
     <string name="audio_sharing_dialog_pair_device_content" msgid="3136997898244863470">"يمكنك إقران جهازك بسماعات رأس أخرى متوافقة أو مشاركة رمز الاستجابة السريعة الخاص بالبث الصوتي مع مستخدِم آخر"</string>
     <string name="audio_sharing_sharing_label" msgid="1038021053061111508">"جارٍ مشاركة الصوت"</string>
     <string name="audio_sharing_pair_button_label" msgid="7987236990273083588">"إقران جهاز جديد"</string>
@@ -5369,14 +5406,14 @@
     <string name="audio_sharing_disconnect_dialog_title" msgid="2192751727237748602">"اختَر جهازًا لإلغاء ربطه"</string>
     <string name="audio_sharing_dialog_disconnect_content" msgid="3840488888970653308">"يمكن لجهازين فقط مشاركة الصوت في كل مرّة"</string>
     <string name="audio_sharing_disconnect_device_button_label" msgid="4272897217708930576">"إلغاء ربط \"<xliff:g id="DEVICE_NAME">%1$s</xliff:g>\""</string>
-    <string name="audio_sharing_stop_dialog_title" msgid="4872853738164232075">"هل تريد الربط بـ \"<xliff:g id="DEVICE_NAME">%1$s</xliff:g>\"؟"</string>
+    <string name="audio_sharing_stop_dialog_title" msgid="4872853738164232075">"هل تريد الاتصال بـ \"<xliff:g id="DEVICE_NAME">%1$s</xliff:g>\"؟"</string>
     <string name="audio_sharing_stop_dialog_content" msgid="6371546856710692910">"سيتم إيقاف مشاركة الصوت مع \"<xliff:g id="DEVICE_NAME">%1$s</xliff:g>\""</string>
     <string name="audio_sharing_stop_dialog_with_two_content" msgid="2119020725467967219">"سيتم إيقاف مشاركة الصوت مع \"<xliff:g id="DEVICE_NAME1">%1$s</xliff:g>\" و\"<xliff:g id="DEVICE_NAME2">%2$s</xliff:g>\""</string>
     <string name="audio_sharing_stop_dialog_with_more_content" msgid="5262441138981618703">"سيتم إيقاف مشاركة الصوت مع سماعات الرأس المرتبطة"</string>
     <string name="audio_sharing_connect_button_label" msgid="4241911519063029982">"ربط"</string>
     <string name="audio_sharing_sharing_stopped_label" msgid="8128194452354240996">"تم إيقاف مشاركة الصوت"</string>
-    <string name="audio_sharing_confirm_dialog_title" msgid="7655147122624691167">"الربط بجهاز متوافق"</string>
-    <string name="audio_sharing_comfirm_dialog_content" msgid="3479217934447446066">"‏لبدء مشاركة الصوت، يجب أولاً ربط هاتفك بسماعات رأس متوافقة مع LE Audio"</string>
+    <string name="audio_sharing_confirm_dialog_title" msgid="7655147122624691167">"الاتصال بجهاز متوافق"</string>
+    <string name="audio_sharing_comfirm_dialog_content" msgid="3479217934447446066">"‏لبدء مشاركة الصوت، يجب التأكّد أولاً من أنّ هاتفك متّصل بسماعات رأس متوافقة مع LE Audio"</string>
     <string name="audio_streams_category_title" msgid="4878022761829895463">"‏الاتصال بجهاز بث صوتي منخفض الطاقة (متوافق مع ميزة Bluetooth LE Audio)"</string>
     <string name="audio_streams_pref_title" msgid="6320485086288646209">"أجهزة بث صوتي قريبة"</string>
     <string name="audio_streams_title" msgid="6617990880383079165">"أجهزة البث الصوتي"</string>
