--- a/res/values-bg/strings.xml
+++ b/res/values-bg/strings.xml
@@ -3336,6 +3336,14 @@
     <string name="spatial_summary_on_two" msgid="4526919818832483883">"Вкл./<xliff:g id="OUTPUT_DEVICE_0">%1$s</xliff:g>, <xliff:g id="OUTPUT_DEVICE_1">%2$s</xliff:g>"</string>
     <string name="spatial_audio_footer_title" msgid="8775010547623606088">"Можете също да включите пространственото аудио за устройствата с Bluetooth."</string>
     <string name="spatial_audio_footer_learn_more_text" msgid="3826811708094366301">"Настройки за свързани устройства"</string>
+    <!-- no translation found for spatial_audio_multi_toggle_title (6175786400035541273) -->
+    <skip />
+    <!-- no translation found for spatial_audio_multi_toggle_off (2086359413991193164) -->
+    <skip />
+    <!-- no translation found for spatial_audio_multi_toggle_on (2988769235357633788) -->
+    <skip />
+    <!-- no translation found for spatial_audio_multi_toggle_head_tracking_on (861779551619033627) -->
+    <skip />
     <string name="zen_mode_settings_schedules_summary" msgid="2047688589286811617">"{count,plural, =0{Нито един}=1{Зададен е 1 график}other{Зададени са # графика}}"</string>
     <string name="zen_mode_settings_title" msgid="682676757791334259">"Не безпокойте"</string>
     <string name="zen_modes_list_title" msgid="5138745349253275428">"Приоритетни режими"</string>
@@ -3633,7 +3641,11 @@
     <string name="nls_feature_reply_summary" msgid="4492543411395565556">"Може да отговаря на съобщения и да взаимодейства с бутоните в известията, включително да отлага или отхвърля известия и да отговаря на обаждания."</string>
     <string name="nls_feature_settings_title" msgid="8208164329853194414">"Промяна на настройките"</string>
     <string name="nls_feature_settings_summary" msgid="3770028705648985689">"Може да включва и изключва режима „Не безпокойте“ и да променя свързаните с него настройки."</string>
+    <!-- no translation found for nls_feature_modes_settings_summary (6678225711796413093) -->
+    <skip />
     <string name="notification_listener_disable_warning_summary" msgid="8373396293802088961">"Ако изключите достъпа до известията за „<xliff:g id="NOTIFICATION_LISTENER_NAME">%1$s</xliff:g>“, достъпът до „Не безпокойте“ също може да се изключи."</string>
+    <!-- no translation found for notification_listener_disable_modes_warning_summary (2985662620702322307) -->
+    <skip />
     <string name="notification_listener_disable_warning_confirm" msgid="841492108402184976">"Изключване"</string>
     <string name="notification_listener_disable_warning_cancel" msgid="8802784105045594324">"Отказ"</string>
     <string name="notif_type_ongoing" msgid="135675014223627555">"В реално време"</string>
@@ -3694,6 +3706,12 @@
     <string name="manage_zen_access_title" msgid="1562322900340107269">"Достъп до „Не безпокойте“"</string>
     <string name="zen_access_detail_switch" msgid="4183681772666138993">"Разрешаване на режима „Не безпокойте“"</string>
     <string name="zen_access_empty_text" msgid="3779921853282293080">"Никое инсталирано приложение не е заявило достъп до „Не безпокойте“"</string>
+    <!-- no translation found for manage_zen_modes_access_title (7568322052929075783) -->
+    <skip />
+    <!-- no translation found for zen_modes_access_detail_switch (19797205786545052) -->
+    <skip />
+    <!-- no translation found for zen_modes_access_empty_text (6393146155692575897) -->
+    <skip />
     <string name="app_notifications_off_desc" msgid="2484843759466874201">"Не сте разрешили на приложението да показва известия"</string>
     <string name="channel_notifications_off_desc" msgid="6202042207121633488">"По ваша заявка Android блокира показването на тази категория известия на устройството"</string>
     <string name="channel_group_notifications_off_desc" msgid="9096417708500595424">"По ваша заявка Android блокира показването на тази група известия на устройството"</string>
@@ -3876,6 +3894,22 @@
     <string name="zen_mode_blurb_theater" msgid="2999237960059524225">"Спрете всички разсейващи елементи за тиха среда"</string>
     <string name="zen_mode_blurb_managed" msgid="5473921634985032149">"Персонализирайте практическата работа и настройките на устройството за различни потребители"</string>
     <string name="zen_mode_blurb_generic" msgid="3041601339807075625">"Намалете прекъсванията, като разрешите само на важни хора и приложения да се свързват с вас"</string>
+    <!-- no translation found for zen_mode_inspiration_schedule_time (5596540503159096153) -->
+    <skip />
+    <!-- no translation found for zen_mode_inspiration_schedule_calendar (3678727180860212700) -->
+    <skip />
+    <!-- no translation found for zen_mode_inspiration_bedtime (6294822414181670666) -->
+    <skip />
+    <!-- no translation found for zen_mode_inspiration_driving (8237825783857483135) -->
+    <skip />
+    <!-- no translation found for zen_mode_inspiration_immersive (4062437428955782933) -->
+    <skip />
+    <!-- no translation found for zen_mode_inspiration_theater (9194190183262761230) -->
+    <skip />
+    <!-- no translation found for zen_mode_inspiration_managed (4607010392213773917) -->
+    <skip />
+    <!-- no translation found for zen_mode_inspiration_generic (9072064817144550243) -->
+    <skip />
     <string name="warning_button_text" msgid="1274234338874005639">"Предупреждение"</string>
     <string name="suggestion_button_close" msgid="6865170855573283759">"Затваряне"</string>
     <string name="device_feedback" msgid="5351614458411688608">"Отзиви за устройството"</string>
@@ -4076,6 +4110,14 @@
     <string name="zen_access_disabled_package_warning" msgid="6565908224294537889">"Трябва да остане включено, защото достъпът до известията е включен"</string>
     <string name="zen_access_revoke_warning_dialog_title" msgid="7377261509261811449">"Да се отмени ли достъпът до режима „Не безпокойте“ за <xliff:g id="APP">%1$s</xliff:g>?"</string>
     <string name="zen_access_revoke_warning_dialog_summary" msgid="8689801842914183595">"Всички правила за режима „Не безпокойте“, създадени от това приложение, ще бъдат премахнати."</string>
+    <!-- no translation found for zen_modes_access_warning_dialog_title (2072265702931309138) -->
+    <skip />
+    <!-- no translation found for zen_modes_access_warning_dialog_summary (2351013300727701273) -->
+    <skip />
+    <!-- no translation found for zen_modes_access_revoke_warning_dialog_title (2703602440018176310) -->
+    <skip />
+    <!-- no translation found for zen_modes_access_revoke_warning_dialog_summary (4669243849023204217) -->
+    <skip />
     <string name="ignore_optimizations_on" msgid="6865583039303804932">"Без оптимизиране"</string>
     <string name="ignore_optimizations_off" msgid="9186557038453586295">"Оптимизиране"</string>
     <string name="ignore_optimizations_on_desc" msgid="1280043916460939932">"Възможно е да доведе до по-бързо изразходване на батерията. Приложението вече ще може да я използва на заден план."</string>
@@ -5322,8 +5364,8 @@
     <string name="sim_category_converted_sim" msgid="8575548015816988908">"Преобразувано в ел. SIM карта. Премахв. и отхвърл."</string>
     <string name="sync_across_devices_title" msgid="3447757705383089345">"Синхронизиране между устройствата"</string>
     <string name="device_diagnostics_title" msgid="2914523189695727897">"Диагностика на устройството"</string>
-    <string name="audio_sharing_title" msgid="4144157137502923821">"Споделяне на аудио"</string>
-    <string name="audio_sharing_switch_title" msgid="7052827328670825701">"Споделяне на аудио"</string>
+    <string name="audio_sharing_title" msgid="4144157137502923821">"Споделяне на звука"</string>
+    <string name="audio_sharing_switch_title" msgid="7052827328670825701">"Споделяне на звука"</string>
     <string name="calls_and_alarms_device_title" msgid="6993559028175454198">"Обаждания и будилници"</string>
     <string name="audio_sharing_description" msgid="1660255584523640628">"Позволете на хората да слушат мултимедията ви заедно с вас. Ще им трябват слушалки, които поддържат LE Audio."</string>
     <string name="audio_sharing_device_group_title" msgid="3019780581643956943">"Активни устройства за мултимедия"</string>
@@ -5371,7 +5413,7 @@
     <string name="audio_sharing_connect_button_label" msgid="4241911519063029982">"Свързване"</string>
     <string name="audio_sharing_sharing_stopped_label" msgid="8128194452354240996">"Споделянето на звука спря"</string>
     <string name="audio_sharing_confirm_dialog_title" msgid="7655147122624691167">"Свързване на съвместимо устройство"</string>
-    <string name="audio_sharing_comfirm_dialog_content" msgid="3479217934447446066">"За да започнете да споделяте аудио, първо свържете телефона си със слушалки, които поддържат LE Audio"</string>
+    <string name="audio_sharing_comfirm_dialog_content" msgid="3479217934447446066">"За да започнете да споделяте звука, първо свържете телефона си със слушалки, които поддържат LE Audio"</string>
     <string name="audio_streams_category_title" msgid="4878022761829895463">"Свързване с аудиопоток от LE"</string>
     <string name="audio_streams_pref_title" msgid="6320485086288646209">"Аудиопотоци в близост"</string>
     <string name="audio_streams_title" msgid="6617990880383079165">"Аудиопотоци"</string>
