--- a/res/values-hy/strings.xml
+++ b/res/values-hy/strings.xml
@@ -3336,6 +3336,14 @@
     <string name="spatial_summary_on_two" msgid="4526919818832483883">"Միացված է/<xliff:g id="OUTPUT_DEVICE_0">%1$s</xliff:g> և <xliff:g id="OUTPUT_DEVICE_1">%2$s</xliff:g>"</string>
     <string name="spatial_audio_footer_title" msgid="8775010547623606088">"Դուք կարող եք նաև միացնել տարածական հնչողությունը Bluetooth սարքերի համար։"</string>
     <string name="spatial_audio_footer_learn_more_text" msgid="3826811708094366301">"Կապված սարքերի կարգավորումներ"</string>
+    <!-- no translation found for spatial_audio_multi_toggle_title (6175786400035541273) -->
+    <skip />
+    <!-- no translation found for spatial_audio_multi_toggle_off (2086359413991193164) -->
+    <skip />
+    <!-- no translation found for spatial_audio_multi_toggle_on (2988769235357633788) -->
+    <skip />
+    <!-- no translation found for spatial_audio_multi_toggle_head_tracking_on (861779551619033627) -->
+    <skip />
     <string name="zen_mode_settings_schedules_summary" msgid="2047688589286811617">"{count,plural, =0{Ոչ մի ժամանակացույց}=1{Սահմանված է 1 ժամանակացույց}one{Սահմանված է # ժամանակացույց}other{Սահմանված է # ժամանակացույց}}"</string>
     <string name="zen_mode_settings_title" msgid="682676757791334259">"Չանհանգստացնել"</string>
     <string name="zen_modes_list_title" msgid="5138745349253275428">"Կարևոր ռեժիմներ"</string>
@@ -3633,7 +3641,11 @@
     <string name="nls_feature_reply_summary" msgid="4492543411395565556">"Այն կարող է պատասխանել հաղորդագրություններին և ակտիվացնել ծանուցումներում առկա կոճակները, այդ թվում՝ հետաձգել կամ փակել ծանուցումները և պատասխանել հեռախոսազանգերին։"</string>
     <string name="nls_feature_settings_title" msgid="8208164329853194414">"Փոխել կարգավորումները"</string>
     <string name="nls_feature_settings_summary" msgid="3770028705648985689">"Այն կարող է միացնել կամ անջատել «Չանհանգստացնել» ռեժիմը և փոփոխել առնչվող կարգավորումները։"</string>
+    <!-- no translation found for nls_feature_modes_settings_summary (6678225711796413093) -->
+    <skip />
     <string name="notification_listener_disable_warning_summary" msgid="8373396293802088961">"Եթե անջատեք ծանուցումները <xliff:g id="NOTIFICATION_LISTENER_NAME">%1$s</xliff:g> օգտատիրոջ համար, «Չանհանգստացնել» գործառույթը նույնպես կարող է անջատվել:"</string>
+    <!-- no translation found for notification_listener_disable_modes_warning_summary (2985662620702322307) -->
+    <skip />
     <string name="notification_listener_disable_warning_confirm" msgid="841492108402184976">"Անջատել"</string>
     <string name="notification_listener_disable_warning_cancel" msgid="8802784105045594324">"Չեղարկել"</string>
     <string name="notif_type_ongoing" msgid="135675014223627555">"Իրական ժամանակում"</string>
@@ -3694,6 +3706,12 @@
     <string name="manage_zen_access_title" msgid="1562322900340107269">"«Չանհանգստացնել» գործառույթի հասանելիություն"</string>
     <string name="zen_access_detail_switch" msgid="4183681772666138993">"Թույլատրել «Չանհանգստացնել» ռեժիմը"</string>
     <string name="zen_access_empty_text" msgid="3779921853282293080">"Տեղադրված հավելվածներից ոչ մեկը Չանհանգստացնել հարցում չի ուղարկել"</string>
+    <!-- no translation found for manage_zen_modes_access_title (7568322052929075783) -->
+    <skip />
+    <!-- no translation found for zen_modes_access_detail_switch (19797205786545052) -->
+    <skip />
+    <!-- no translation found for zen_modes_access_empty_text (6393146155692575897) -->
+    <skip />
     <string name="app_notifications_off_desc" msgid="2484843759466874201">"Դուք չեք թույլատրել ծանուցումներ այս հավելվածից"</string>
     <string name="channel_notifications_off_desc" msgid="6202042207121633488">"Դուք անջատել եք ծանուցումների այս կատեգորիան"</string>
     <string name="channel_group_notifications_off_desc" msgid="9096417708500595424">"Դուք անջատել եք ծանուցումների այս խումբը"</string>
@@ -3876,6 +3894,22 @@
     <string name="zen_mode_blurb_theater" msgid="2999237960059524225">"Չեզոքացրեք բոլոր շեղող գործոնները հանգիստ միջավայրի համար"</string>
     <string name="zen_mode_blurb_managed" msgid="5473921634985032149">"Անհատականացրեք սարքի գործառույթներն ու կարգավորումները տարբեր օգտատերերի համար"</string>
     <string name="zen_mode_blurb_generic" msgid="3041601339807075625">"Թույլ տվեք, որ միայն կարևոր մարդիկ կապվեն ձեզ հետ և հավելվածներն ուղարկեն ծանուցումներ, որպեսզի քիչ շեղվեք"</string>
+    <!-- no translation found for zen_mode_inspiration_schedule_time (5596540503159096153) -->
+    <skip />
+    <!-- no translation found for zen_mode_inspiration_schedule_calendar (3678727180860212700) -->
+    <skip />
+    <!-- no translation found for zen_mode_inspiration_bedtime (6294822414181670666) -->
+    <skip />
+    <!-- no translation found for zen_mode_inspiration_driving (8237825783857483135) -->
+    <skip />
+    <!-- no translation found for zen_mode_inspiration_immersive (4062437428955782933) -->
+    <skip />
+    <!-- no translation found for zen_mode_inspiration_theater (9194190183262761230) -->
+    <skip />
+    <!-- no translation found for zen_mode_inspiration_managed (4607010392213773917) -->
+    <skip />
+    <!-- no translation found for zen_mode_inspiration_generic (9072064817144550243) -->
+    <skip />
     <string name="warning_button_text" msgid="1274234338874005639">"Նախազգուշացում"</string>
     <string name="suggestion_button_close" msgid="6865170855573283759">"Փակել"</string>
     <string name="device_feedback" msgid="5351614458411688608">"Կարծիք հայտնել սարքի մասին"</string>
@@ -4076,6 +4110,14 @@
     <string name="zen_access_disabled_package_warning" msgid="6565908224294537889">"Պետք է միացած մնա, քանի որ ծանուցումների օգտագործումն ակտիվացված է"</string>
     <string name="zen_access_revoke_warning_dialog_title" msgid="7377261509261811449">"Չեղարկե՞լ <xliff:g id="APP">%1$s</xliff:g> հավելվածին տրամադրված «Չանհանգստացնել» գործառույթն օգտագործելու թույլտվությունը:"</string>
     <string name="zen_access_revoke_warning_dialog_summary" msgid="8689801842914183595">"Այս հավելվածի կողմից ստեղծված բոլոր «Չանհանգստացնել» կանոնները կհեռացվեն:"</string>
+    <!-- no translation found for zen_modes_access_warning_dialog_title (2072265702931309138) -->
+    <skip />
+    <!-- no translation found for zen_modes_access_warning_dialog_summary (2351013300727701273) -->
+    <skip />
+    <!-- no translation found for zen_modes_access_revoke_warning_dialog_title (2703602440018176310) -->
+    <skip />
+    <!-- no translation found for zen_modes_access_revoke_warning_dialog_summary (4669243849023204217) -->
+    <skip />
     <string name="ignore_optimizations_on" msgid="6865583039303804932">"Չօպտիմալացնել"</string>
     <string name="ignore_optimizations_off" msgid="9186557038453586295">"Օպտիմալացնել"</string>
     <string name="ignore_optimizations_on_desc" msgid="1280043916460939932">"Մարտկոցը կարող է ավելի արագ նստել: Մարտկոցը ֆոնային ռեժիմում օգտագործելու սահմանափակումը կհանվի:"</string>
@@ -5362,7 +5404,7 @@
     <string name="audio_sharing_stop_button_label" msgid="8770519671470608849">"Կանգնեցնել փոխանցումը"</string>
     <string name="audio_sharing_settings_button_label" msgid="8574808650318270491">"Կարգավորումներ"</string>
     <string name="audio_sharing_disconnect_dialog_title" msgid="2192751727237748602">"Ընտրեք սարքը՝ կապն անջատելու համար"</string>
-    <string name="audio_sharing_dialog_disconnect_content" msgid="3840488888970653308">"Աուդիոն միաժամանակ կարող է նվագարկվել ոչ ավել, քան երկու սարքերում"</string>
+    <string name="audio_sharing_dialog_disconnect_content" msgid="3840488888970653308">"Աուդիոն միաժամանակ կարող է նվագարկվել ոչ ավելի, քան երկու սարքերում"</string>
     <string name="audio_sharing_disconnect_device_button_label" msgid="4272897217708930576">"Չեղարկել <xliff:g id="DEVICE_NAME">%1$s</xliff:g>-ի զուգակցումը"</string>
     <string name="audio_sharing_stop_dialog_title" msgid="4872853738164232075">"Միացնե՞լ <xliff:g id="DEVICE_NAME">%1$s</xliff:g> սարքը"</string>
     <string name="audio_sharing_stop_dialog_content" msgid="6371546856710692910">"Դուք կկանգնեցնեք աուդիոյի փոխանցումը <xliff:g id="DEVICE_NAME">%1$s</xliff:g> սարքին"</string>
