--- a/res/values-in/strings.xml
+++ b/res/values-in/strings.xml
@@ -411,8 +411,7 @@
     <string name="security_settings_face_watch_preference_summary" msgid="5817376447253802793">"Wajah dan <xliff:g id="WATCH">%s</xliff:g> ditambahkan"</string>
     <string name="security_settings_fingerprint_single_face_watch_preference_summary" msgid="764951912234638192">"Wajah, sidik jari, dan <xliff:g id="WATCH">%s</xliff:g> ditambahkan"</string>
     <string name="security_settings_fingerprint_multiple_face_watch_preference_summary" msgid="3935500711366489380">"Wajah, sidik jari, dan <xliff:g id="WATCH">%s</xliff:g> ditambahkan"</string>
-    <!-- no translation found for mandatory_biometrics_prompt_description (8928849367818726432) -->
-    <skip />
+    <string name="mandatory_biometrics_prompt_description" msgid="8928849367818726432">"Pemeriksaan Identitas aktif"</string>
     <string name="security_settings_remoteauth_preference_title" msgid="8319680328086089533">"Buka Kunci Remote Authenticator"</string>
     <string name="security_settings_remoteauth_preference_summary" msgid="1507004469316635196">"Smartwatch ditambahkan"</string>
     <string name="security_settings_remoteauth_enroll_introduction_title" msgid="2151004795778999671">"Menyiapkan smartwatch"</string>
@@ -3337,6 +3336,14 @@
     <string name="spatial_summary_on_two" msgid="4526919818832483883">"Aktif / <xliff:g id="OUTPUT_DEVICE_0">%1$s</xliff:g> dan <xliff:g id="OUTPUT_DEVICE_1">%2$s</xliff:g>"</string>
     <string name="spatial_audio_footer_title" msgid="8775010547623606088">"Anda juga dapat mengaktifkan Audio Spasial untuk perangkat Bluetooth."</string>
     <string name="spatial_audio_footer_learn_more_text" msgid="3826811708094366301">"Setelan perangkat terhubung"</string>
+    <!-- no translation found for spatial_audio_multi_toggle_title (6175786400035541273) -->
+    <skip />
+    <!-- no translation found for spatial_audio_multi_toggle_off (2086359413991193164) -->
+    <skip />
+    <!-- no translation found for spatial_audio_multi_toggle_on (2988769235357633788) -->
+    <skip />
+    <!-- no translation found for spatial_audio_multi_toggle_head_tracking_on (861779551619033627) -->
+    <skip />
     <string name="zen_mode_settings_schedules_summary" msgid="2047688589286811617">"{count,plural, =0{Tidak ada}=1{1 jadwal disetel}other{# jadwal disetel}}"</string>
     <string name="zen_mode_settings_title" msgid="682676757791334259">"Jangan Ganggu"</string>
     <string name="zen_modes_list_title" msgid="5138745349253275428">"Mode Prioritas"</string>
@@ -3634,7 +3641,11 @@
     <string name="nls_feature_reply_summary" msgid="4492543411395565556">"Aplikasi dapat membalas pesan dan melakukan tindakan pada tombol di notifikasi, termasuk menunda atau menutup notifikasi dan menjawab panggilan."</string>
     <string name="nls_feature_settings_title" msgid="8208164329853194414">"Mengubah setelan"</string>
     <string name="nls_feature_settings_summary" msgid="3770028705648985689">"Aplikasi dapat mengaktifkan atau menonaktifkan fitur Jangan Ganggu dan mengubah setelan terkait."</string>
+    <!-- no translation found for nls_feature_modes_settings_summary (6678225711796413093) -->
+    <skip />
     <string name="notification_listener_disable_warning_summary" msgid="8373396293802088961">"Jika Anda menonaktifkan akses notifikasi untuk <xliff:g id="NOTIFICATION_LISTENER_NAME">%1$s</xliff:g>, akses ke mode Jangan Ganggu mungkin juga akan dinonaktifkan."</string>
+    <!-- no translation found for notification_listener_disable_modes_warning_summary (2985662620702322307) -->
+    <skip />
     <string name="notification_listener_disable_warning_confirm" msgid="841492108402184976">"Nonaktifkan"</string>
     <string name="notification_listener_disable_warning_cancel" msgid="8802784105045594324">"Batalkan"</string>
     <string name="notif_type_ongoing" msgid="135675014223627555">"Real-time"</string>
@@ -3695,6 +3706,12 @@
     <string name="manage_zen_access_title" msgid="1562322900340107269">"Akses Jangan Ganggu"</string>
     <string name="zen_access_detail_switch" msgid="4183681772666138993">"Izinkan Mode Jangan Ganggu"</string>
     <string name="zen_access_empty_text" msgid="3779921853282293080">"Tidak ada aplikasi terpasang yang meminta akses Jangan Ganggu"</string>
+    <!-- no translation found for manage_zen_modes_access_title (7568322052929075783) -->
+    <skip />
+    <!-- no translation found for zen_modes_access_detail_switch (19797205786545052) -->
+    <skip />
+    <!-- no translation found for zen_modes_access_empty_text (6393146155692575897) -->
+    <skip />
     <string name="app_notifications_off_desc" msgid="2484843759466874201">"Anda belum mengizinkan notifikasi dari aplikasi ini"</string>
     <string name="channel_notifications_off_desc" msgid="6202042207121633488">"Sesuai permintaan, Android memblokir kategori notifikasi ini agar tidak muncul di perangkat ini"</string>
     <string name="channel_group_notifications_off_desc" msgid="9096417708500595424">"Sesuai permintaan, Android memblokir grup notifikasi ini agar tidak muncul di perangkat ini"</string>
@@ -3877,6 +3894,22 @@
     <string name="zen_mode_blurb_theater" msgid="2999237960059524225">"Menghilangkan semua distraksi untuk mendapatkan lingkungan yang tenang"</string>
     <string name="zen_mode_blurb_managed" msgid="5473921634985032149">"Mempersonalisasi pengalaman dan setelan perangkat untuk setiap pengguna"</string>
     <string name="zen_mode_blurb_generic" msgid="3041601339807075625">"Meminimalkan gangguan dengan hanya mengizinkan orang dan aplikasi penting yang dapat menghubungi Anda"</string>
+    <!-- no translation found for zen_mode_inspiration_schedule_time (5596540503159096153) -->
+    <skip />
+    <!-- no translation found for zen_mode_inspiration_schedule_calendar (3678727180860212700) -->
+    <skip />
+    <!-- no translation found for zen_mode_inspiration_bedtime (6294822414181670666) -->
+    <skip />
+    <!-- no translation found for zen_mode_inspiration_driving (8237825783857483135) -->
+    <skip />
+    <!-- no translation found for zen_mode_inspiration_immersive (4062437428955782933) -->
+    <skip />
+    <!-- no translation found for zen_mode_inspiration_theater (9194190183262761230) -->
+    <skip />
+    <!-- no translation found for zen_mode_inspiration_managed (4607010392213773917) -->
+    <skip />
+    <!-- no translation found for zen_mode_inspiration_generic (9072064817144550243) -->
+    <skip />
     <string name="warning_button_text" msgid="1274234338874005639">"Peringatan"</string>
     <string name="suggestion_button_close" msgid="6865170855573283759">"Tutup"</string>
     <string name="device_feedback" msgid="5351614458411688608">"Kirim masukan tentang perangkat ini"</string>
@@ -4077,6 +4110,14 @@
     <string name="zen_access_disabled_package_warning" msgid="6565908224294537889">"Harus tetap aktif karena akses notifikasi juga aktif"</string>
     <string name="zen_access_revoke_warning_dialog_title" msgid="7377261509261811449">"Cabut akses ke status Jangan Ganggu untuk <xliff:g id="APP">%1$s</xliff:g>?"</string>
     <string name="zen_access_revoke_warning_dialog_summary" msgid="8689801842914183595">"Semua aturan Jangan Ganggu yang dibuat oleh aplikasi ini akan dihapus."</string>
+    <!-- no translation found for zen_modes_access_warning_dialog_title (2072265702931309138) -->
+    <skip />
+    <!-- no translation found for zen_modes_access_warning_dialog_summary (2351013300727701273) -->
+    <skip />
+    <!-- no translation found for zen_modes_access_revoke_warning_dialog_title (2703602440018176310) -->
+    <skip />
+    <!-- no translation found for zen_modes_access_revoke_warning_dialog_summary (4669243849023204217) -->
+    <skip />
     <string name="ignore_optimizations_on" msgid="6865583039303804932">"Jangan optimalkan"</string>
     <string name="ignore_optimizations_off" msgid="9186557038453586295">"Optimalkan"</string>
     <string name="ignore_optimizations_on_desc" msgid="1280043916460939932">"Dapat menghabiskan baterai lebih cepat. Aplikasi tidak lagi dibatasi untuk menggunakan baterai di latar belakang."</string>
@@ -5326,7 +5367,7 @@
     <string name="audio_sharing_title" msgid="4144157137502923821">"Berbagi audio"</string>
     <string name="audio_sharing_switch_title" msgid="7052827328670825701">"Bagikan audio"</string>
     <string name="calls_and_alarms_device_title" msgid="6993559028175454198">"Panggilan dan alarm"</string>
-    <string name="audio_sharing_description" msgid="1660255584523640628">"Izinkan orang lain mendengarkan media bersama Anda. Pendengar memerlukan headphone LE Audio mereka sendiri."</string>
+    <string name="audio_sharing_description" msgid="1660255584523640628">"Izinkan orang lain mendengarkan media bersama Anda. Pendengar perlu memakai headphone LE Audio sendiri."</string>
     <string name="audio_sharing_device_group_title" msgid="3019780581643956943">"Perangkat media yang aktif"</string>
     <string name="audio_sharing_call_audio_title" msgid="7978867452289583929">"Audio panggilan"</string>
     <string name="audio_sharing_call_audio_description" msgid="6573621048260616924">"Hanya diputar di <xliff:g id="DEVICE_NAME">%1$s</xliff:g>"</string>
@@ -5350,21 +5391,21 @@
     <string name="audio_sharing_share_button_label" msgid="3895900668317105537">"Bagikan audio"</string>
     <string name="audio_sharing_no_thanks_button_label" msgid="5822491984114744357">"Lain kali"</string>
     <string name="audio_sharing_share_with_dialog_title" msgid="3934377530640830364">"Bagikan audio dengan <xliff:g id="DEVICE_NAME">%1$s</xliff:g>?"</string>
-    <string name="audio_sharing_share_with_more_dialog_title" msgid="2840069088858232267">"Membagikan audio dengan perangkat lain"</string>
+    <string name="audio_sharing_share_with_more_dialog_title" msgid="2840069088858232267">"Berbagi audio dengan perangkat lain"</string>
     <string name="audio_sharing_share_with_button_label" msgid="4146194430380237357">"Berbagi dengan <xliff:g id="DEVICE_NAME">%1$s</xliff:g>"</string>
     <string name="audio_sharing_close_button_label" msgid="2666534149100498574">"Tutup"</string>
-    <string name="audio_sharing_dialog_connect_device_content" msgid="2873230647152283734">"Hubungkan headphone lain yang kompatibel, atau bagikan nama dan sandi streaming Anda dengan orang lain"</string>
+    <string name="audio_sharing_dialog_connect_device_content" msgid="2873230647152283734">"Hubungkan headphone lain yang kompatibel, atau bagikan nama dan sandi streaming Anda kepada orang lain"</string>
     <string name="audio_sharing_dialog_pair_device_content" msgid="3136997898244863470">"Sambungkan headphone lain yang kompatibel, atau bagikan kode QR streaming audio Anda dengan orang lain"</string>
     <string name="audio_sharing_sharing_label" msgid="1038021053061111508">"Berbagi audio"</string>
     <string name="audio_sharing_pair_button_label" msgid="7987236990273083588">"Sambungkan perangkat baru"</string>
     <string name="audio_sharing_qrcode_button_label" msgid="3207039106555097659">"Tampilkan kode QR"</string>
     <string name="audio_sharing_notification_title" msgid="1204798942946033005">"Anda membagikan audio"</string>
-    <string name="audio_sharing_notification_content" msgid="1577180829878785642">"Orang yang mendengarkan dapat mendengar media Anda. Mereka tidak dapat mendengarkan panggilan."</string>
+    <string name="audio_sharing_notification_content" msgid="1577180829878785642">"Orang yang mendengarkan dapat mendengar media Anda, tetapi tidak audio dalam panggilan."</string>
     <string name="audio_sharing_stop_button_label" msgid="8770519671470608849">"Berhenti berbagi"</string>
     <string name="audio_sharing_settings_button_label" msgid="8574808650318270491">"Setelan"</string>
-    <string name="audio_sharing_disconnect_dialog_title" msgid="2192751727237748602">"Memilih perangkat yang ingin diputuskan sambungannya"</string>
-    <string name="audio_sharing_dialog_disconnect_content" msgid="3840488888970653308">"Hanya 2 perangkat yang dapat membagikan audio pada satu waktu"</string>
-    <string name="audio_sharing_disconnect_device_button_label" msgid="4272897217708930576">"Putuskan sambungan <xliff:g id="DEVICE_NAME">%1$s</xliff:g>"</string>
+    <string name="audio_sharing_disconnect_dialog_title" msgid="2192751727237748602">"Pilih perangkat yang ingin diputuskan hubungannya"</string>
+    <string name="audio_sharing_dialog_disconnect_content" msgid="3840488888970653308">"Hanya 2 perangkat yang dapat berbagi audio pada satu waktu"</string>
+    <string name="audio_sharing_disconnect_device_button_label" msgid="4272897217708930576">"Putuskan hubungan <xliff:g id="DEVICE_NAME">%1$s</xliff:g>"</string>
     <string name="audio_sharing_stop_dialog_title" msgid="4872853738164232075">"Hubungkan <xliff:g id="DEVICE_NAME">%1$s</xliff:g>?"</string>
     <string name="audio_sharing_stop_dialog_content" msgid="6371546856710692910">"Anda akan berhenti berbagi audio dengan <xliff:g id="DEVICE_NAME">%1$s</xliff:g>"</string>
     <string name="audio_sharing_stop_dialog_with_two_content" msgid="2119020725467967219">"Anda akan berhenti berbagi audio dengan <xliff:g id="DEVICE_NAME1">%1$s</xliff:g> dan <xliff:g id="DEVICE_NAME2">%2$s</xliff:g>"</string>
@@ -5378,7 +5419,7 @@
     <string name="audio_streams_title" msgid="6617990880383079165">"Streaming audio"</string>
     <string name="audio_streams_qr_code_summary" msgid="2838923349871884871">"Hubungkan ke streaming audio menggunakan kode QR"</string>
     <string name="audio_streams_empty" msgid="8803517701437394982">"Tidak ada streaming audio di sekitar."</string>
-    <string name="audio_streams_disconnect" msgid="1755594831469579161">"Berhenti menghubungkan"</string>
+    <string name="audio_streams_disconnect" msgid="1755594831469579161">"Berhenti hubungkan"</string>
     <string name="audio_streams_connect" msgid="1955964373102927954">"Hubungkan"</string>
     <string name="audio_streams_qr_code_is_not_valid_format" msgid="4856288389653121830">"Format kode QR tidak valid"</string>
     <string name="audio_streams_qr_code_scanner" msgid="525396804963685478">"Untuk mulai mendengarkan, pusatkan kode QR di bawah"</string>
@@ -5407,7 +5448,7 @@
     <string name="audio_streams_qr_code_page_password" msgid="7268475614131297060">"Sandi: <xliff:g id="PASSWORD">%1$s</xliff:g>"</string>
     <string name="audio_streams_qr_code_page_description" msgid="1317961663706630428">"Untuk mendengarkan <xliff:g id="STREAM_NAME">%1$s</xliff:g>, orang lain dapat menghubungkan headphone yang kompatibel ke perangkat Android mereka. Kemudian, mereka dapat memindai kode QR ini."</string>
     <string name="audio_streams_main_page_title" msgid="1838380471076527639">"Temukan streaming audio"</string>
-    <string name="audio_streams_main_page_subtitle" msgid="3251995732921981539">"Mendengarkan perangkat yang membagikan audio atau siaran Auracast di sekitar"</string>
+    <string name="audio_streams_main_page_subtitle" msgid="3251995732921981539">"Dengarkan perangkat yang berbagi audio atau siaran Auracast di sekitar"</string>
     <string name="audio_streams_main_page_device_title" msgid="2635744035523908253">"Perangkat audio Anda"</string>
     <string name="audio_streams_main_page_no_device_summary" msgid="2936000845397406389">"Hubungkan headphone yang kompatibel"</string>
     <string name="audio_streams_main_page_scan_section_title" msgid="2778235929304061163">"Streaming audio di sekitar"</string>
