--- a/res/values-ka/strings.xml
+++ b/res/values-ka/strings.xml
@@ -3336,6 +3336,10 @@
     <string name="spatial_summary_on_two" msgid="4526919818832483883">"ჩართულია / <xliff:g id="OUTPUT_DEVICE_0">%1$s</xliff:g> და <xliff:g id="OUTPUT_DEVICE_1">%2$s</xliff:g>"</string>
     <string name="spatial_audio_footer_title" msgid="8775010547623606088">"ასევე, შეგიძლიათ, ჩაურთოთ Bluetooth მოწყობილობებს სივრცითი აუდიო."</string>
     <string name="spatial_audio_footer_learn_more_text" msgid="3826811708094366301">"დაკავშირებული მოწყობილობების პარამეტრები"</string>
+    <string name="spatial_audio_multi_toggle_title" msgid="6175786400035541273">"სივრცითი აუდიო"</string>
+    <string name="spatial_audio_multi_toggle_off" msgid="2086359413991193164">"გამორთული"</string>
+    <string name="spatial_audio_multi_toggle_on" msgid="2988769235357633788">"გამორთული"</string>
+    <string name="spatial_audio_multi_toggle_head_tracking_on" msgid="861779551619033627">"გამორთული"</string>
     <string name="zen_mode_settings_schedules_summary" msgid="2047688589286811617">"{count,plural, =0{არცერთი}=1{დაყენებულია 1 განრიგი}other{დაყენებულია # განრიგი}}"</string>
     <string name="zen_mode_settings_title" msgid="682676757791334259">"არ შემაწუხოთ"</string>
     <string name="zen_modes_list_title" msgid="5138745349253275428">"პრიორიტეტული რეჟიმები"</string>
@@ -3633,7 +3637,11 @@
     <string name="nls_feature_reply_summary" msgid="4492543411395565556">"მას შეუძლია შეტყობინებებზე პასუხი და შეტყობინებებში ღილაკების გამოყენება, მაგალითად, შეტყობინებებისა და ზარების ჩაჩუმება ან უარყოფა და მათზე პასუხი."</string>
     <string name="nls_feature_settings_title" msgid="8208164329853194414">"პარამეტრების შეცვლა"</string>
     <string name="nls_feature_settings_summary" msgid="3770028705648985689">"მას შეუძლია „არ შემაწუხოთ“ რეჟიმის ჩართვა ან გამორთვა და დაკავშირებული პარამეტრების შეცვლა."</string>
+    <!-- no translation found for nls_feature_modes_settings_summary (6678225711796413093) -->
+    <skip />
     <string name="notification_listener_disable_warning_summary" msgid="8373396293802088961">"შეტყობინებებზე წვდომის გამორთვის შემთხვევაში, <xliff:g id="NOTIFICATION_LISTENER_NAME">%1$s</xliff:g>, სავარაუდოდ, „არ შემაწუხოთ“ რეჟიმზე წვდომასაც დაკარგავს."</string>
+    <!-- no translation found for notification_listener_disable_modes_warning_summary (2985662620702322307) -->
+    <skip />
     <string name="notification_listener_disable_warning_confirm" msgid="841492108402184976">"გამორთვა"</string>
     <string name="notification_listener_disable_warning_cancel" msgid="8802784105045594324">"გაუქმება"</string>
     <string name="notif_type_ongoing" msgid="135675014223627555">"რეალურ დროში"</string>
@@ -3694,6 +3702,12 @@
     <string name="manage_zen_access_title" msgid="1562322900340107269">"„არ შემაწუხოთ“ წვდომა"</string>
     <string name="zen_access_detail_switch" msgid="4183681772666138993">"„არ შემაწუხოთ“ რეჟიმის დაშვება"</string>
     <string name="zen_access_empty_text" msgid="3779921853282293080">"დაუინსტალირებელმა აპებმა მოითხოვა „არ შემაწუხოთ“ წვდომა"</string>
+    <!-- no translation found for manage_zen_modes_access_title (7568322052929075783) -->
+    <skip />
+    <!-- no translation found for zen_modes_access_detail_switch (19797205786545052) -->
+    <skip />
+    <!-- no translation found for zen_modes_access_empty_text (6393146155692575897) -->
+    <skip />
     <string name="app_notifications_off_desc" msgid="2484843759466874201">"თქვენ არ დაუშვით შეტყობინებები ამ აპიდან"</string>
     <string name="channel_notifications_off_desc" msgid="6202042207121633488">"თქვენი მოთხოვნის მიხედვით, Android ბლოკავს შეტყობინებების ამ კატეგორიის მოწყობილობაზე გამოჩენას"</string>
     <string name="channel_group_notifications_off_desc" msgid="9096417708500595424">"თქვენი მოთხოვნის მიხედვით, Android ბლოკავს შეტყობინებების ამ ჯგუფის გამოჩენას მოწყობილობაზე"</string>
@@ -3876,6 +3890,22 @@
     <string name="zen_mode_blurb_theater" msgid="2999237960059524225">"გააქრეთ ყველა ყურადღების გამფანტავი ფაქტორი ჩუმი გარემოსათვის"</string>
     <string name="zen_mode_blurb_managed" msgid="5473921634985032149">"მოახდინეთ მოწყობილობის პარამეტრების და გამოცდილებების პერსონალიზება სხვადასხვა მომხმარებლისთვის"</string>
     <string name="zen_mode_blurb_generic" msgid="3041601339807075625">"მეცით უფლება მხოლოდ მნიშვნელოვან ადამიანებს და აპებს, რომ დაგიკავშირდნენ, რითაც მინიმუმადე შეამცირებთ შეფერხებებს"</string>
+    <!-- no translation found for zen_mode_inspiration_schedule_time (5596540503159096153) -->
+    <skip />
+    <!-- no translation found for zen_mode_inspiration_schedule_calendar (3678727180860212700) -->
+    <skip />
+    <!-- no translation found for zen_mode_inspiration_bedtime (6294822414181670666) -->
+    <skip />
+    <!-- no translation found for zen_mode_inspiration_driving (8237825783857483135) -->
+    <skip />
+    <!-- no translation found for zen_mode_inspiration_immersive (4062437428955782933) -->
+    <skip />
+    <!-- no translation found for zen_mode_inspiration_theater (9194190183262761230) -->
+    <skip />
+    <!-- no translation found for zen_mode_inspiration_managed (4607010392213773917) -->
+    <skip />
+    <!-- no translation found for zen_mode_inspiration_generic (9072064817144550243) -->
+    <skip />
     <string name="warning_button_text" msgid="1274234338874005639">"შენიშვნა"</string>
     <string name="suggestion_button_close" msgid="6865170855573283759">"დახურვა"</string>
     <string name="device_feedback" msgid="5351614458411688608">"გამოხმაურება ამ მოწყობილობის შესახებ"</string>
@@ -4076,6 +4106,14 @@
     <string name="zen_access_disabled_package_warning" msgid="6565908224294537889">"უნდა დარჩეს ჩართული, რადგან ჩართულია შეტყობინებებზე წვდომა"</string>
     <string name="zen_access_revoke_warning_dialog_title" msgid="7377261509261811449">"გსურთ, <xliff:g id="APP">%1$s</xliff:g>-ს გაუუქმოთ წვდომა რეჟიმზე „არ შემაწუხოთ“?"</string>
     <string name="zen_access_revoke_warning_dialog_summary" msgid="8689801842914183595">"ამ აპის მიერ შექმნილი „არ შემაწუხოთ“ ტიპის ყველა წესი ამოიშლება."</string>
+    <!-- no translation found for zen_modes_access_warning_dialog_title (2072265702931309138) -->
+    <skip />
+    <!-- no translation found for zen_modes_access_warning_dialog_summary (2351013300727701273) -->
+    <skip />
+    <!-- no translation found for zen_modes_access_revoke_warning_dialog_title (2703602440018176310) -->
+    <skip />
+    <!-- no translation found for zen_modes_access_revoke_warning_dialog_summary (4669243849023204217) -->
+    <skip />
     <string name="ignore_optimizations_on" msgid="6865583039303804932">"არ გააკეთო ოპტიმიზაცია"</string>
     <string name="ignore_optimizations_off" msgid="9186557038453586295">"ოპტიმიზაცია"</string>
     <string name="ignore_optimizations_on_desc" msgid="1280043916460939932">"თქვენი ბატარეა შეიძლება უფრო სწრაფად დაცალოს. აპი აღარ იქნება შეზღუდული ფონურ რეჟიმში ბატარეის მოხმარებისგან."</string>
