--- a/res/values-kk/strings.xml
+++ b/res/values-kk/strings.xml
@@ -411,8 +411,7 @@
     <string name="security_settings_face_watch_preference_summary" msgid="5817376447253802793">"Бет тану функциясы және <xliff:g id="WATCH">%s</xliff:g> қосылды."</string>
     <string name="security_settings_fingerprint_single_face_watch_preference_summary" msgid="764951912234638192">"Бет тану функциясы, саусақ ізі және <xliff:g id="WATCH">%s</xliff:g> қосылды."</string>
     <string name="security_settings_fingerprint_multiple_face_watch_preference_summary" msgid="3935500711366489380">"Бет тану функциясы, саусақ іздері және <xliff:g id="WATCH">%s</xliff:g> қосылды."</string>
-    <!-- no translation found for mandatory_biometrics_prompt_description (8928849367818726432) -->
-    <skip />
+    <string name="mandatory_biometrics_prompt_description" msgid="8928849367818726432">"Жеке басты тексеру функциясы қосулы"</string>
     <string name="security_settings_remoteauth_preference_title" msgid="8319680328086089533">"Remote Authenticator құлпын ашу"</string>
     <string name="security_settings_remoteauth_preference_summary" msgid="1507004469316635196">"Сағат қосылды."</string>
     <string name="security_settings_remoteauth_enroll_introduction_title" msgid="2151004795778999671">"Сағат параметрлерін реттеу"</string>
@@ -3337,6 +3336,14 @@
     <string name="spatial_summary_on_two" msgid="4526919818832483883">"Қосулы/<xliff:g id="OUTPUT_DEVICE_0">%1$s</xliff:g> және <xliff:g id="OUTPUT_DEVICE_1">%2$s</xliff:g>"</string>
     <string name="spatial_audio_footer_title" msgid="8775010547623606088">"Кеңістіктік дыбыс функциясын Bluetooth құрылғылары үшін де қосуға болады."</string>
     <string name="spatial_audio_footer_learn_more_text" msgid="3826811708094366301">"Жалғанған құрылғы параметрлері"</string>
+    <!-- no translation found for spatial_audio_multi_toggle_title (6175786400035541273) -->
+    <skip />
+    <!-- no translation found for spatial_audio_multi_toggle_off (2086359413991193164) -->
+    <skip />
+    <!-- no translation found for spatial_audio_multi_toggle_on (2988769235357633788) -->
+    <skip />
+    <!-- no translation found for spatial_audio_multi_toggle_head_tracking_on (861779551619033627) -->
+    <skip />
     <string name="zen_mode_settings_schedules_summary" msgid="2047688589286811617">"{count,plural, =0{Жоқ}=1{1 кесте қойылған}other{# кесте қойылған}}"</string>
     <string name="zen_mode_settings_title" msgid="682676757791334259">"Мазаламау"</string>
     <string name="zen_modes_list_title" msgid="5138745349253275428">"Басымдылық режимдері"</string>
@@ -3634,7 +3641,11 @@
     <string name="nls_feature_reply_summary" msgid="4492543411395565556">"Ол хабарларға жауап беріп, хабарландырулардағы түймелер арқылы әрекет ете алады, мысалы, хабарландыруларды кейінге қалдырады, жабады, қоңырауларға жауап береді."</string>
     <string name="nls_feature_settings_title" msgid="8208164329853194414">"Параметрлерді өзгерту"</string>
     <string name="nls_feature_settings_summary" msgid="3770028705648985689">"Ол мазаламау режимін өшіріп-қосадыды және тиісті параметрлерді өзгерте алады."</string>
+    <!-- no translation found for nls_feature_modes_settings_summary (6678225711796413093) -->
+    <skip />
     <string name="notification_listener_disable_warning_summary" msgid="8373396293802088961">"Егер <xliff:g id="NOTIFICATION_LISTENER_NAME">%1$s</xliff:g> үшін хабарландыруларды пайдалану рұқсатын өшірсеңіз, мазаламау режимінің рұқсаты да өшуі мүмкін."</string>
+    <!-- no translation found for notification_listener_disable_modes_warning_summary (2985662620702322307) -->
+    <skip />
     <string name="notification_listener_disable_warning_confirm" msgid="841492108402184976">"Өшіру"</string>
     <string name="notification_listener_disable_warning_cancel" msgid="8802784105045594324">"Бас тарту"</string>
     <string name="notif_type_ongoing" msgid="135675014223627555">"Нақты уақыт"</string>
@@ -3695,6 +3706,12 @@
     <string name="manage_zen_access_title" msgid="1562322900340107269">"Мазаламау режимін пайдалану"</string>
     <string name="zen_access_detail_switch" msgid="4183681772666138993">"Мазаламау режимін пайдалануға рұқсат ету"</string>
     <string name="zen_access_empty_text" msgid="3779921853282293080">"Орнатылған қолданбалардың ешбірі Мазаламау режиміне кіруге рұқсат сұрамады"</string>
+    <!-- no translation found for manage_zen_modes_access_title (7568322052929075783) -->
+    <skip />
+    <!-- no translation found for zen_modes_access_detail_switch (19797205786545052) -->
+    <skip />
+    <!-- no translation found for zen_modes_access_empty_text (6393146155692575897) -->
+    <skip />
     <string name="app_notifications_off_desc" msgid="2484843759466874201">"Осы қолданба хабарландыруларына рұқсат бермедіңіз."</string>
     <string name="channel_notifications_off_desc" msgid="6202042207121633488">"Сұрауыңыз бойынша Android мұндай хабарландыруларды көрсетпейді"</string>
     <string name="channel_group_notifications_off_desc" msgid="9096417708500595424">"Сұрауыңыз бойынша Android бұл құрылғыда мұндай хабарландырулар тобын бөгейді"</string>
@@ -3877,6 +3894,22 @@
     <string name="zen_mode_blurb_theater" msgid="2999237960059524225">"Айналада тыныш болуы үшін, алаңдататын нәрселердің барлығын өшіріп тастаңыз."</string>
     <string name="zen_mode_blurb_managed" msgid="5473921634985032149">"Әр пайдаланушы үшін құрылғы мүмкіндіктері мен параметрлерін жекелендіріңіз."</string>
     <string name="zen_mode_blurb_generic" msgid="3041601339807075625">"Тек маңызды адамдар мен қолданбалардан хабарландыру алуға рұқсат беріп, мазалайтын нәрселерді азайтыңыз."</string>
+    <!-- no translation found for zen_mode_inspiration_schedule_time (5596540503159096153) -->
+    <skip />
+    <!-- no translation found for zen_mode_inspiration_schedule_calendar (3678727180860212700) -->
+    <skip />
+    <!-- no translation found for zen_mode_inspiration_bedtime (6294822414181670666) -->
+    <skip />
+    <!-- no translation found for zen_mode_inspiration_driving (8237825783857483135) -->
+    <skip />
+    <!-- no translation found for zen_mode_inspiration_immersive (4062437428955782933) -->
+    <skip />
+    <!-- no translation found for zen_mode_inspiration_theater (9194190183262761230) -->
+    <skip />
+    <!-- no translation found for zen_mode_inspiration_managed (4607010392213773917) -->
+    <skip />
+    <!-- no translation found for zen_mode_inspiration_generic (9072064817144550243) -->
+    <skip />
     <string name="warning_button_text" msgid="1274234338874005639">"Ескерту"</string>
     <string name="suggestion_button_close" msgid="6865170855573283759">"Жабу"</string>
     <string name="device_feedback" msgid="5351614458411688608">"Осы құрылғы туралы пікір жіберу"</string>
@@ -4077,6 +4110,14 @@
     <string name="zen_access_disabled_package_warning" msgid="6565908224294537889">"Хабарландыру параметрі қосулы болғандықтан, міндетті түрде қосулы болуы тиіс"</string>
     <string name="zen_access_revoke_warning_dialog_title" msgid="7377261509261811449">"<xliff:g id="APP">%1$s</xliff:g> қолданбасына мазаламау режимін пайдалануға берілген рұқсатты қайтарып алу керек пе?"</string>
     <string name="zen_access_revoke_warning_dialog_summary" msgid="8689801842914183595">"Мазаламау режимінің осы қолданба жасаған барлық ережесі жойылады."</string>
+    <!-- no translation found for zen_modes_access_warning_dialog_title (2072265702931309138) -->
+    <skip />
+    <!-- no translation found for zen_modes_access_warning_dialog_summary (2351013300727701273) -->
+    <skip />
+    <!-- no translation found for zen_modes_access_revoke_warning_dialog_title (2703602440018176310) -->
+    <skip />
+    <!-- no translation found for zen_modes_access_revoke_warning_dialog_summary (4669243849023204217) -->
+    <skip />
     <string name="ignore_optimizations_on" msgid="6865583039303804932">"Оңтайландырмау"</string>
     <string name="ignore_optimizations_off" msgid="9186557038453586295">"Оңтайландыру"</string>
     <string name="ignore_optimizations_on_desc" msgid="1280043916460939932">"Батарея тезірек отыруы мүмкін: қолданбаларға енді фондық режимде батареяны пайдалануға шектеу қойылмайды"</string>
@@ -4619,7 +4660,7 @@
     <string name="media_output_label_title" msgid="4139048973886819148">"<xliff:g id="LABEL">%s</xliff:g> қолданбасын ойнату орны:"</string>
     <string name="media_output_title_without_playing" msgid="3339321669132875821">"Аудио әрі қарай ойнатылады"</string>
     <string name="media_output_default_summary" msgid="4200343059396412376">"Осы құрылғы"</string>
-    <string name="media_output_audio_sharing" msgid="8169294522817470115">"Аудио бөлісу"</string>
+    <string name="media_output_audio_sharing" msgid="8169294522817470115">"Аудио беріліп жатыр"</string>
     <string name="media_out_summary_ongoing_call_state" msgid="475188726850090363">"Қоңыраулар кезінде қолжетімді емес"</string>
     <string name="take_call_on_title" msgid="1159417893879946757">"Қоңырауды қабылдау құрылғысы"</string>
     <string name="cannot_change_apn_toast" msgid="296540724089240405">"Бұл APN параметрлерін өзгерту мүмкін емес."</string>
@@ -5326,11 +5367,11 @@
     <string name="audio_sharing_title" msgid="4144157137502923821">"Аудио бөлісу"</string>
     <string name="audio_sharing_switch_title" msgid="7052827328670825701">"Аудионы бөлісу"</string>
     <string name="calls_and_alarms_device_title" msgid="6993559028175454198">"Қоңыраулар мен оятқыштар"</string>
-    <string name="audio_sharing_description" msgid="1660255584523640628">"Адамдарға мультимедианы сізбен бірге тыңдауға рұқсат етіңіз. Тыңдаушыларға өз LE Audio құлақаспаптарын пайдалану қажет."</string>
-    <string name="audio_sharing_device_group_title" msgid="3019780581643956943">"Белсенді медиа құрылғылар"</string>
+    <string name="audio_sharing_description" msgid="1660255584523640628">"Адамдарға мультимедианы сізбен бірге тыңдауға рұқсат етіңіз. Тыңдаушылар өз LE Audio құлақаспаптарын пайдалануы қажет."</string>
+    <string name="audio_sharing_device_group_title" msgid="3019780581643956943">"Істеп тұрған медиа құрылғылар"</string>
     <string name="audio_sharing_call_audio_title" msgid="7978867452289583929">"Қоңырау кезіндегі дыбыс"</string>
     <string name="audio_sharing_call_audio_description" msgid="6573621048260616924">"Тек <xliff:g id="DEVICE_NAME">%1$s</xliff:g> құрылғысында ойнату"</string>
-    <string name="audio_sharing_test_sound_title" msgid="6438868185641027763">"Сынама дыбыс ойнатыңыз"</string>
+    <string name="audio_sharing_test_sound_title" msgid="6438868185641027763">"Дыбысты тексеріп көріңіз"</string>
     <string name="audio_sharing_test_sound_description" msgid="4072462502371937399">"Барлық тыңдаушы оны естуі керек."</string>
     <string name="audio_sharing_stream_settings_title" msgid="1374391898689242036">"Аудио трансляция параметрлері"</string>
     <string name="audio_sharing_stream_name_title" msgid="8156859441897180940">"Атауы"</string>
@@ -5355,7 +5396,7 @@
     <string name="audio_sharing_close_button_label" msgid="2666534149100498574">"Жабу"</string>
     <string name="audio_sharing_dialog_connect_device_content" msgid="2873230647152283734">"Басқа үйлесімді құлақаспапты жалғаңыз немесе трансляция атауын және құпия сөзін басқа адамға жіберіңіз."</string>
     <string name="audio_sharing_dialog_pair_device_content" msgid="3136997898244863470">"Басқа үйлесімді құлақаспапты жұптаңыз немесе аудио трансляцияның QR кодын басқа адамға жіберіңіз."</string>
-    <string name="audio_sharing_sharing_label" msgid="1038021053061111508">"Аудио бөлісу әрекеті орындалып жатыр."</string>
+    <string name="audio_sharing_sharing_label" msgid="1038021053061111508">"Аудио беріліп жатыр"</string>
     <string name="audio_sharing_pair_button_label" msgid="7987236990273083588">"Жаңа құрылғыны жұптау"</string>
     <string name="audio_sharing_qrcode_button_label" msgid="3207039106555097659">"QR кодты көрсету"</string>
     <string name="audio_sharing_notification_title" msgid="1204798942946033005">"Аудио бөлісіп жатырсыз"</string>
