--- a/res/values-ky/strings.xml
+++ b/res/values-ky/strings.xml
@@ -411,8 +411,7 @@
     <string name="security_settings_face_watch_preference_summary" msgid="5817376447253802793">"Жүз жана <xliff:g id="WATCH">%s</xliff:g> кошулду"</string>
     <string name="security_settings_fingerprint_single_face_watch_preference_summary" msgid="764951912234638192">"Жүз, манжа издери жана <xliff:g id="WATCH">%s</xliff:g> кошулду"</string>
     <string name="security_settings_fingerprint_multiple_face_watch_preference_summary" msgid="3935500711366489380">"Жүз, манжа издери жана <xliff:g id="WATCH">%s</xliff:g> кошулду"</string>
-    <!-- no translation found for mandatory_biometrics_prompt_description (8928849367818726432) -->
-    <skip />
+    <string name="mandatory_biometrics_prompt_description" msgid="8928849367818726432">"Өздүгүн текшерүү функциясы күйүк"</string>
     <string name="security_settings_remoteauth_preference_title" msgid="8319680328086089533">"Remote Authenticator менен кулпусун ачуу"</string>
     <string name="security_settings_remoteauth_preference_summary" msgid="1507004469316635196">"Саат кошулду"</string>
     <string name="security_settings_remoteauth_enroll_introduction_title" msgid="2151004795778999671">"Саатыңызды тууралап алыңыз"</string>
@@ -2482,7 +2481,7 @@
     <string name="power_usage_level_and_status" msgid="821521456989429593">"<xliff:g id="LEVEL">%1$s</xliff:g> - <xliff:g id="STATUS">%2$s</xliff:g>"</string>
     <string name="power_discharge_remaining" msgid="6997529817917076536">"<xliff:g id="REMAIN">%1$s</xliff:g> калды"</string>
     <string name="power_charge_remaining" msgid="7046064326172265116">"<xliff:g id="UNTIL_CHARGED">%1$s</xliff:g> кубаттоо"</string>
-    <string name="power_usage_detail_screen_time" msgid="6027274749498485283">"Түзмөктү колдонуу убакыты"</string>
+    <string name="power_usage_detail_screen_time" msgid="6027274749498485283">"Түзмөк канча убакыт колдонулду"</string>
     <string name="power_usage_detail_background_time" msgid="3661437083554322691">"Фондогу убакыт"</string>
     <string name="low_battery_summary" msgid="4458925347316501953">"Батареянын кубаты төмөн"</string>
     <string name="background_activity_summary" msgid="3817376868497046016">"Колдонмо фондо аткарылсын"</string>
@@ -2627,7 +2626,7 @@
     <string name="battery_app_usage_since_last_full_charge_to" msgid="4339201995118102114">"Акыркы жолу толук кубатталгандан бери <xliff:g id="SLOT_TIMESTAMP">%s</xliff:g> чейин колдонмолордун керектеши"</string>
     <string name="battery_usage_total_less_than_one_minute" msgid="951460680288855780">"Жалпы: бир мүнөткө жетпейт"</string>
     <string name="battery_usage_background_less_than_one_minute" msgid="267133882897827276">"Фондо колдонулган убакыт: бир мүнөткө жетпейт"</string>
-    <string name="battery_usage_screen_time_less_than_one_minute" msgid="578511021578427369">"Түзмөктү колдонуу убакыты: бир мүнөткө жетпейт"</string>
+    <string name="battery_usage_screen_time_less_than_one_minute" msgid="578511021578427369">"Түзмөк канча убакыт колдонулду: бир мүнөткө жетпейт"</string>
     <string name="power_usage_time_less_than_one_minute" msgid="1599706998204418081">"Бир мүнөткө жетпейт"</string>
     <string name="battery_usage_for_total_time" msgid="8402254046930910905">"Жалпысынан: <xliff:g id="TIME">%s</xliff:g>"</string>
     <string name="battery_usage_for_background_time" msgid="9109637210617095188">"Фондо колдонулушу: <xliff:g id="TIME">%s</xliff:g>"</string>
@@ -3337,6 +3336,14 @@
     <string name="spatial_summary_on_two" msgid="4526919818832483883">"Күйүк/<xliff:g id="OUTPUT_DEVICE_0">%1$s</xliff:g> жана <xliff:g id="OUTPUT_DEVICE_1">%2$s</xliff:g>"</string>
     <string name="spatial_audio_footer_title" msgid="8775010547623606088">"Мейкиндиктүү үндү Bluetooth түзмөктөрү үчүн да күйгүзө аласыз."</string>
     <string name="spatial_audio_footer_learn_more_text" msgid="3826811708094366301">"Туташкан түзмөктөрдүн параметрлери"</string>
+    <!-- no translation found for spatial_audio_multi_toggle_title (6175786400035541273) -->
+    <skip />
+    <!-- no translation found for spatial_audio_multi_toggle_off (2086359413991193164) -->
+    <skip />
+    <!-- no translation found for spatial_audio_multi_toggle_on (2988769235357633788) -->
+    <skip />
+    <!-- no translation found for spatial_audio_multi_toggle_head_tracking_on (861779551619033627) -->
+    <skip />
     <string name="zen_mode_settings_schedules_summary" msgid="2047688589286811617">"{count,plural, =0{Жок}=1{1 график коюлду}other{# график коюлду}}"</string>
     <string name="zen_mode_settings_title" msgid="682676757791334259">"Тынчымды алба"</string>
     <string name="zen_modes_list_title" msgid="5138745349253275428">"Маанилүүлүк режимдери"</string>
@@ -3634,7 +3641,11 @@
     <string name="nls_feature_reply_summary" msgid="4492543411395565556">"Чалууларга жана билдирүүлөргө жооп берип, билдирмелерди убактылуу өчүрүп же жаап, алардагы баскычтарды баса алат."</string>
     <string name="nls_feature_settings_title" msgid="8208164329853194414">"Параметрлерди өзгөртөт"</string>
     <string name="nls_feature_settings_summary" msgid="3770028705648985689">"\"Тынчымды алба\" режимин күйгүзүп же өчүрүп, анын параметрлерин өзгөртө алат."</string>
+    <!-- no translation found for nls_feature_modes_settings_summary (6678225711796413093) -->
+    <skip />
     <string name="notification_listener_disable_warning_summary" msgid="8373396293802088961">"Эгер <xliff:g id="NOTIFICATION_LISTENER_NAME">%1$s</xliff:g> колдонмосунун билдирмелерин алуудан баш тартсаңыз, \"Тынчымды алба\" режиминин параметрлерин өзгөртө албай каласыз."</string>
+    <!-- no translation found for notification_listener_disable_modes_warning_summary (2985662620702322307) -->
+    <skip />
     <string name="notification_listener_disable_warning_confirm" msgid="841492108402184976">"Өчүрүү"</string>
     <string name="notification_listener_disable_warning_cancel" msgid="8802784105045594324">"Жок"</string>
     <string name="notif_type_ongoing" msgid="135675014223627555">"Анык убакыт"</string>
@@ -3695,6 +3706,12 @@
     <string name="manage_zen_access_title" msgid="1562322900340107269">"\"Тынчымды алба\" функциясы"</string>
     <string name="zen_access_detail_switch" msgid="4183681772666138993">"\"Тынчымды алба\" режимине уруксат берүү"</string>
     <string name="zen_access_empty_text" msgid="3779921853282293080">"Орнотулган колдонмолор үчүн \"Тынчымды алба\" функциясы талап кылынбайт"</string>
+    <!-- no translation found for manage_zen_modes_access_title (7568322052929075783) -->
+    <skip />
+    <!-- no translation found for zen_modes_access_detail_switch (19797205786545052) -->
+    <skip />
+    <!-- no translation found for zen_modes_access_empty_text (6393146155692575897) -->
+    <skip />
     <string name="app_notifications_off_desc" msgid="2484843759466874201">"Бул колдонмонун билдирмелерине тыюу салдыңыз"</string>
     <string name="channel_notifications_off_desc" msgid="6202042207121633488">"Суранычыңыз боюнча Android ушул категориядагы билдирмелерди бул түзмөктөн көрсөтпөй, бөгөттөп жатат"</string>
     <string name="channel_group_notifications_off_desc" msgid="9096417708500595424">"Суранычыңыз боюнча Android ушул категориядагы билдирмелерди бул түзмөктөн көрсөтпөй, бөгөттөп жатат"</string>
@@ -3877,6 +3894,22 @@
     <string name="zen_mode_blurb_theater" msgid="2999237960059524225">"Тынч чөйрө үчүн бардык алаксыткан нерселерди жоюңуз"</string>
     <string name="zen_mode_blurb_managed" msgid="5473921634985032149">"Ар кандай колдонуучулар үчүн түзмөктү колдонууну жана параметрлерди жекелештирүү"</string>
     <string name="zen_mode_blurb_generic" msgid="3041601339807075625">"Маанилүү адамдарга жана колдонмолорго гана сиз менен байланышууга уруксат берип, үзгүлтүккө учуроо деңгээлин азайтыңыз"</string>
+    <!-- no translation found for zen_mode_inspiration_schedule_time (5596540503159096153) -->
+    <skip />
+    <!-- no translation found for zen_mode_inspiration_schedule_calendar (3678727180860212700) -->
+    <skip />
+    <!-- no translation found for zen_mode_inspiration_bedtime (6294822414181670666) -->
+    <skip />
+    <!-- no translation found for zen_mode_inspiration_driving (8237825783857483135) -->
+    <skip />
+    <!-- no translation found for zen_mode_inspiration_immersive (4062437428955782933) -->
+    <skip />
+    <!-- no translation found for zen_mode_inspiration_theater (9194190183262761230) -->
+    <skip />
+    <!-- no translation found for zen_mode_inspiration_managed (4607010392213773917) -->
+    <skip />
+    <!-- no translation found for zen_mode_inspiration_generic (9072064817144550243) -->
+    <skip />
     <string name="warning_button_text" msgid="1274234338874005639">"Эскертүү"</string>
     <string name="suggestion_button_close" msgid="6865170855573283759">"Жабуу"</string>
     <string name="device_feedback" msgid="5351614458411688608">"Түзмөк тууралуу пикир билдирүү"</string>
@@ -4077,6 +4110,14 @@
     <string name="zen_access_disabled_package_warning" msgid="6565908224294537889">"Билдирмелерге уруксат берилгендиктен, күйүп турушу керек"</string>
     <string name="zen_access_revoke_warning_dialog_title" msgid="7377261509261811449">"<xliff:g id="APP">%1$s</xliff:g> колдонмосуна \"Тынчымды алба\" режимин тыюу саласызбы?"</string>
     <string name="zen_access_revoke_warning_dialog_summary" msgid="8689801842914183595">"Бул колдонмо түзгөн \"Тынчымды алба\" эрежелеринин баары өчөт."</string>
+    <!-- no translation found for zen_modes_access_warning_dialog_title (2072265702931309138) -->
+    <skip />
+    <!-- no translation found for zen_modes_access_warning_dialog_summary (2351013300727701273) -->
+    <skip />
+    <!-- no translation found for zen_modes_access_revoke_warning_dialog_title (2703602440018176310) -->
+    <skip />
+    <!-- no translation found for zen_modes_access_revoke_warning_dialog_summary (4669243849023204217) -->
+    <skip />
     <string name="ignore_optimizations_on" msgid="6865583039303804932">"Үнөмдөлбөсүн"</string>
     <string name="ignore_optimizations_off" msgid="9186557038453586295">"Үнөмдөө"</string>
     <string name="ignore_optimizations_on_desc" msgid="1280043916460939932">"Батареяңыз тез эле отуруп калышы мүмкүн. Мындан ары колдонмонун батареяны фондо сарптоосу чектелбейт."</string>
@@ -4619,7 +4660,7 @@
     <string name="media_output_label_title" msgid="4139048973886819148">"<xliff:g id="LABEL">%s</xliff:g> аркылуу ойнотуу"</string>
     <string name="media_output_title_without_playing" msgid="3339321669132875821">"Аудио кайсы жерде ойнотулат:"</string>
     <string name="media_output_default_summary" msgid="4200343059396412376">"Ушул түзмөк"</string>
-    <string name="media_output_audio_sharing" msgid="8169294522817470115">"Аудиону бөлүшүү"</string>
+    <string name="media_output_audio_sharing" msgid="8169294522817470115">"Чогуу угуу"</string>
     <string name="media_out_summary_ongoing_call_state" msgid="475188726850090363">"Сүйлөшүп жаткан учурда жеткиликсиз"</string>
     <string name="take_call_on_title" msgid="1159417893879946757">"Чалууну кабыл алуу"</string>
     <string name="cannot_change_apn_toast" msgid="296540724089240405">"Бул APN\'ди өзгөртүүгө болбойт."</string>
@@ -5323,15 +5364,15 @@
     <string name="sim_category_converted_sim" msgid="8575548015816988908">"eSIM-картага өзгөртүлдү. Аны чыгарыңыз."</string>
     <string name="sync_across_devices_title" msgid="3447757705383089345">"Түзмөктөрдө шайкештирүү"</string>
     <string name="device_diagnostics_title" msgid="2914523189695727897">"Түзмөктөгү мүчүлүштүктөрдү аныктоо"</string>
-    <string name="audio_sharing_title" msgid="4144157137502923821">"Аудиону бөлүшүү"</string>
-    <string name="audio_sharing_switch_title" msgid="7052827328670825701">"Аудиону бөлүшүү"</string>
+    <string name="audio_sharing_title" msgid="4144157137502923821">"Чогуу угуу"</string>
+    <string name="audio_sharing_switch_title" msgid="7052827328670825701">"Чогуу угуу"</string>
     <string name="calls_and_alarms_device_title" msgid="6993559028175454198">"Чалуулар жана ойготкучтар"</string>
     <string name="audio_sharing_description" msgid="1660255584523640628">"Башкаларга медиа файлдарды сиз менен чогуу угууга уруксат бериңиз. Угуу үчүн алардын LE Audio гарнитурасы болушу керек."</string>
-    <string name="audio_sharing_device_group_title" msgid="3019780581643956943">"Активдүү медиа түзмөктөрү"</string>
+    <string name="audio_sharing_device_group_title" msgid="3019780581643956943">"Активдүү медиа түзмөктөр"</string>
     <string name="audio_sharing_call_audio_title" msgid="7978867452289583929">"Аудио чалуу"</string>
     <string name="audio_sharing_call_audio_description" msgid="6573621048260616924">"<xliff:g id="DEVICE_NAME">%1$s</xliff:g> түзмөгүндө гана ойнотуу"</string>
     <string name="audio_sharing_test_sound_title" msgid="6438868185641027763">"Сигналды угуп көрүү"</string>
-    <string name="audio_sharing_test_sound_description" msgid="4072462502371937399">"Муну угуп жаткан кишилердин баары угат"</string>
+    <string name="audio_sharing_test_sound_description" msgid="4072462502371937399">"Ал туташып турган колдонуучулардын баарына угулушу керек"</string>
     <string name="audio_sharing_stream_settings_title" msgid="1374391898689242036">"Аудио агымдын параметрлери"</string>
     <string name="audio_sharing_stream_name_title" msgid="8156859441897180940">"Аталышы"</string>
     <string name="audio_sharing_stream_password_title" msgid="7026649168165764602">"Сырсөз"</string>
@@ -5353,8 +5394,8 @@
     <string name="audio_sharing_share_with_more_dialog_title" msgid="2840069088858232267">"Башка түзмөктө чогуу угуңуз"</string>
     <string name="audio_sharing_share_with_button_label" msgid="4146194430380237357">"<xliff:g id="DEVICE_NAME">%1$s</xliff:g> аркылуу бөлүшүңүз"</string>
     <string name="audio_sharing_close_button_label" msgid="2666534149100498574">"Жабуу"</string>
-    <string name="audio_sharing_dialog_connect_device_content" msgid="2873230647152283734">"Дагы башка шайкеш гарнитураны туташтырып же ал киши менен агымдын аталышын жана сырсөзүн бөлүшүңүз"</string>
-    <string name="audio_sharing_dialog_pair_device_content" msgid="3136997898244863470">"Дагы башка шайкеш гарнитураны туташтырып же ал киши менен аудио агымдын QR кодун бөлүшүңүз"</string>
+    <string name="audio_sharing_dialog_connect_device_content" msgid="2873230647152283734">"Дагы башка шайкеш кулакчындарды туташтырыңыз же ал колдонуучуга аудио агымдын аталышы менен сырсөзүн жөнөтүңүз"</string>
+    <string name="audio_sharing_dialog_pair_device_content" msgid="3136997898244863470">"Дагы башка шайкеш кулакчындарды туташтырыңыз же ал колдонуучуга аудио агымдын QR кодун жөнөтүңүз"</string>
     <string name="audio_sharing_sharing_label" msgid="1038021053061111508">"Чогуу угулууда"</string>
     <string name="audio_sharing_pair_button_label" msgid="7987236990273083588">"Жаңы түзмөк кошуу"</string>
     <string name="audio_sharing_qrcode_button_label" msgid="3207039106555097659">"QR кодун көрсөтүү"</string>
@@ -5362,7 +5403,7 @@
     <string name="audio_sharing_notification_content" msgid="1577180829878785642">"Угуп жаткан кишилер медиа файлыңызды уга алышат. Алар чалууларыңызды угушпайт."</string>
     <string name="audio_sharing_stop_button_label" msgid="8770519671470608849">"Чогуу угууну токтотуу"</string>
     <string name="audio_sharing_settings_button_label" msgid="8574808650318270491">"Параметрлер"</string>
-    <string name="audio_sharing_disconnect_dialog_title" msgid="2192751727237748602">"Ажыратуу үчүн түзмөктү тандаңыз"</string>
+    <string name="audio_sharing_disconnect_dialog_title" msgid="2192751727237748602">"Ажыратылуучу түзмөктү тандаңыз"</string>
     <string name="audio_sharing_dialog_disconnect_content" msgid="3840488888970653308">"Бир убакта 2 түзмөктө гана чогуу угууга болот"</string>
     <string name="audio_sharing_disconnect_device_button_label" msgid="4272897217708930576">"<xliff:g id="DEVICE_NAME">%1$s</xliff:g> түзмөгүн ажыратуу"</string>
     <string name="audio_sharing_stop_dialog_title" msgid="4872853738164232075">"<xliff:g id="DEVICE_NAME">%1$s</xliff:g> туташтырылсынбы?"</string>
@@ -5372,7 +5413,7 @@
     <string name="audio_sharing_connect_button_label" msgid="4241911519063029982">"Туташтыруу"</string>
     <string name="audio_sharing_sharing_stopped_label" msgid="8128194452354240996">"Чогуу угуу токтотулду"</string>
     <string name="audio_sharing_confirm_dialog_title" msgid="7655147122624691167">"Шайкеш түзмөктү туташтыруу"</string>
-    <string name="audio_sharing_comfirm_dialog_content" msgid="3479217934447446066">"Чогуу угуу үчүн, адегенде LE Audio гарнитурасын телефонуңузга туташтырыңыз"</string>
+    <string name="audio_sharing_comfirm_dialog_content" msgid="3479217934447446066">"Чогуу угуу үчүн, адегенде, LE Audio гарнитурасын телефонуңузга туташтырыңыз"</string>
     <string name="audio_streams_category_title" msgid="4878022761829895463">"LE аудио агымына туташтыруу"</string>
     <string name="audio_streams_pref_title" msgid="6320485086288646209">"Жакын жердеги аудио агымдар"</string>
     <string name="audio_streams_title" msgid="6617990880383079165">"Аудио агымдар"</string>
@@ -5386,7 +5427,7 @@
     <string name="audio_streams_add_source_failed_state_summary" msgid="3937546443978562322">"Туташпай жатат. Кайра аракет кылыңыз."</string>
     <string name="audio_streams_connecting_summary" msgid="7237827765572331702">"Туташууда…"</string>
     <string name="audio_streams_dialog_stream_is_not_available" msgid="4032878851270690546">"Аудио агым жеткиликсиз"</string>
-    <string name="audio_streams_is_not_playing" msgid="8480293894696007941">"Бул аудио агымда эч нерсе ойнотулбай турат"</string>
+    <string name="audio_streams_is_not_playing" msgid="8480293894696007941">"Эч нерсе угулган жок"</string>
     <string name="audio_streams_dialog_close" msgid="8177201719298408431">"Жабуу"</string>
     <string name="audio_streams_dialog_listen" msgid="7290340191504987685">"Угуу"</string>
     <string name="audio_streams_dialog_retry" msgid="4456843891970998556">"Кайталоо"</string>
@@ -5415,7 +5456,7 @@
     <string name="audio_streams_main_page_scan_qr_code_summary" msgid="1991792283368249499">"Агымдын QR кодун скандап, угуп баштаңыз"</string>
     <string name="audio_streams_main_page_password_dialog_join_button" msgid="2967747276379153408">"Агымды угуу"</string>
     <string name="audio_streams_main_page_qr_code_scanner_summary" msgid="5312980105735143360">"<xliff:g id="DEVICE_NAME">%1$s</xliff:g> түзмөгүндө угуу үчүн аудио агымдын QR кодун скандаңыз"</string>
-    <string name="audio_streams_main_page_password_dialog_cannot_edit" msgid="9020898619297520153">"Чогуу угуп жатканда сырсөздү түзөтүүгө болбойт. Сырсөздү өзгөртүү үчүн, адегенде чогуу угууну өчүрүңүз."</string>
+    <string name="audio_streams_main_page_password_dialog_cannot_edit" msgid="9020898619297520153">"Чогуу угуп жатканда сырсөздү өзгөртө албайсыз. Адегенде чогуу угууну өчүрүңүз."</string>
     <string name="audio_streams_qr_code_scanner_label" msgid="8799703301071378034">"QR кодунун сканери"</string>
     <string name="homepage_search" msgid="6759334912284663559">"Издөө параметрлери"</string>
 </resources>
