--- a/res/values-my/strings.xml
+++ b/res/values-my/strings.xml
@@ -3336,6 +3336,10 @@
     <string name="spatial_summary_on_two" msgid="4526919818832483883">"ဖွင့် / <xliff:g id="OUTPUT_DEVICE_0">%1$s</xliff:g> နှင့် <xliff:g id="OUTPUT_DEVICE_1">%2$s</xliff:g>"</string>
     <string name="spatial_audio_footer_title" msgid="8775010547623606088">"ဘလူးတုသ်သုံးစက်များအတွက် ‘ထောင့်စုံအော်ဒီယို’ ကိုလည်း ဖွင့်နိုင်သည်။"</string>
     <string name="spatial_audio_footer_learn_more_text" msgid="3826811708094366301">"ချိတ်ဆက်ထားသည့် စက်ဆက်တင်များ"</string>
+    <string name="spatial_audio_multi_toggle_title" msgid="6175786400035541273">"ထောင့်စုံအော်ဒီယို"</string>
+    <string name="spatial_audio_multi_toggle_off" msgid="2086359413991193164">"ပိတ်"</string>
+    <string name="spatial_audio_multi_toggle_on" msgid="2988769235357633788">"ပိတ်"</string>
+    <string name="spatial_audio_multi_toggle_head_tracking_on" msgid="861779551619033627">"ပိတ်"</string>
     <string name="zen_mode_settings_schedules_summary" msgid="2047688589286811617">"{count,plural, =0{မရှိ}=1{အချိန်ဇယား ၁ ခု သတ်မှတ်ထားသည်}other{အချိန်ဇယား # ခု သတ်မှတ်ထားသည်}}"</string>
     <string name="zen_mode_settings_title" msgid="682676757791334259">"မနှောင့်ယှက်ရ"</string>
     <string name="zen_modes_list_title" msgid="5138745349253275428">"ဦးစားပေးမုဒ်"</string>
@@ -3633,7 +3637,11 @@
     <string name="nls_feature_reply_summary" msgid="4492543411395565556">"၎င်းသည် မက်ဆေ့ဂျ်များကို စာပြန်နိုင်ပြီး နှိုးစက်သံ ဆိုင်းငံ့ခြင်း (သို့) ပယ်ခြင်းနှင့် ဖုန်းလက်ခံခြင်းများအပါအဝင် အကြောင်းကြားချက်များရှိ ခလုတ်များကို နှိပ်နိုင်သည်။"</string>
     <string name="nls_feature_settings_title" msgid="8208164329853194414">"ဆက်တင်များ ပြောင်းခြင်း"</string>
     <string name="nls_feature_settings_summary" msgid="3770028705648985689">"၎င်းသည် ‘မနှောင့်ယှက်ရ’ ဝန်ဆောင်မှုကို ဖွင့်နိုင် (သို့) ပိတ်နိုင်ပြီး သက်ဆိုင်ရာ ဆက်တင်များကို ပြောင်းနိုင်သည်။"</string>
+    <!-- no translation found for nls_feature_modes_settings_summary (6678225711796413093) -->
+    <skip />
     <string name="notification_listener_disable_warning_summary" msgid="8373396293802088961">"<xliff:g id="NOTIFICATION_LISTENER_NAME">%1$s</xliff:g> အတွက် အကြောင်းကြားချက် အသုံးပြုခွင့်ကို ပိတ်လိုက်လျှင် \'မနှောင့်ယှက်ရ\' ကို အသုံးပြုခွင့်လည်း ပိတ်သွားပါမည်။"</string>
+    <!-- no translation found for notification_listener_disable_modes_warning_summary (2985662620702322307) -->
+    <skip />
     <string name="notification_listener_disable_warning_confirm" msgid="841492108402184976">"ပိတ်ရန်"</string>
     <string name="notification_listener_disable_warning_cancel" msgid="8802784105045594324">"မလုပ်တော့"</string>
     <string name="notif_type_ongoing" msgid="135675014223627555">"အချိန်နှင့် တစ်ပြေးညီ"</string>
@@ -3694,6 +3702,12 @@
     <string name="manage_zen_access_title" msgid="1562322900340107269">"\'မနှောင့်ယှက်ရ\' သုံးခွင့်"</string>
     <string name="zen_access_detail_switch" msgid="4183681772666138993">"\'မနှောင့်ယှက်ရ\' ကိုခွင့်ပြုရန်"</string>
     <string name="zen_access_empty_text" msgid="3779921853282293080">"ထည့်သွင်းထားသည့် အက်ပ်များသည် \'မနှောက်ယှက်ရ\' သုံးခွင့် တောင်းဆိုမထားပါ"</string>
+    <!-- no translation found for manage_zen_modes_access_title (7568322052929075783) -->
+    <skip />
+    <!-- no translation found for zen_modes_access_detail_switch (19797205786545052) -->
+    <skip />
+    <!-- no translation found for zen_modes_access_empty_text (6393146155692575897) -->
+    <skip />
     <string name="app_notifications_off_desc" msgid="2484843759466874201">"ဤအက်ပ်မှ အကြောင်းကြားချက်များကို သင်ခွင့်ပြုမထားပါ"</string>
     <string name="channel_notifications_off_desc" msgid="6202042207121633488">"သင့်တောင်းဆိုချက်အရ Android သည် ဤအကြောင်းကြားချက်အမျိုးအစားများ ဤစက်ပစ္စည်းပေါ်တွင် ပေါ်မလာအောင် ပိတ်ထားပါသည်"</string>
     <string name="channel_group_notifications_off_desc" msgid="9096417708500595424">"သင့်တောင်းဆိုချက်အရ Android သည် ဤအကြောင်းကြားချက်အုပ်စုများ ဤစက်ပစ္စည်းပေါ်တွင် ပေါ်မလာအောင် ပိတ်ထားပါသည်"</string>
@@ -3876,6 +3890,22 @@
     <string name="zen_mode_blurb_theater" msgid="2999237960059524225">"တိတ်ဆိတ်သောပတ်ဝန်းကျင်အတွက် အာရုံပျံ့စရာအားလုံးကို ဖယ်ရှားပါ"</string>
     <string name="zen_mode_blurb_managed" msgid="5473921634985032149">"မတူညီသော အသုံးပြုသူများအတွက် စက်ပစ္စည်းအသုံးပြုမှုနှင့် ဆက်တင်များကို ပုဂ္ဂိုလ်ရေးသီးသန့်လုပ်ပါ"</string>
     <string name="zen_mode_blurb_generic" msgid="3041601339807075625">"အရေးကြီး ပုဂ္ဂိုလ်နှင့်အက်ပ်များကိုသာ သင့်ထံဆက်သွယ်ခွင့်ပြုခြင်းဖြင့် အနှောင့်အယှက်များ လျှော့ချပါ"</string>
+    <!-- no translation found for zen_mode_inspiration_schedule_time (5596540503159096153) -->
+    <skip />
+    <!-- no translation found for zen_mode_inspiration_schedule_calendar (3678727180860212700) -->
+    <skip />
+    <!-- no translation found for zen_mode_inspiration_bedtime (6294822414181670666) -->
+    <skip />
+    <!-- no translation found for zen_mode_inspiration_driving (8237825783857483135) -->
+    <skip />
+    <!-- no translation found for zen_mode_inspiration_immersive (4062437428955782933) -->
+    <skip />
+    <!-- no translation found for zen_mode_inspiration_theater (9194190183262761230) -->
+    <skip />
+    <!-- no translation found for zen_mode_inspiration_managed (4607010392213773917) -->
+    <skip />
+    <!-- no translation found for zen_mode_inspiration_generic (9072064817144550243) -->
+    <skip />
     <string name="warning_button_text" msgid="1274234338874005639">"သတိပေးချက်"</string>
     <string name="suggestion_button_close" msgid="6865170855573283759">"ပိတ်ရန်"</string>
     <string name="device_feedback" msgid="5351614458411688608">"ဤကိရိယာအတွက် အကြံပြုချက် ပို့ရန်"</string>
@@ -4076,6 +4106,14 @@
     <string name="zen_access_disabled_package_warning" msgid="6565908224294537889">"အကြောင်းကြားချက် အသုံးပြုခွင့်ကိုဖွင့်ထားသောကြောင့် ဆက်လက်ဖွင့်ထားရပါမည်"</string>
     <string name="zen_access_revoke_warning_dialog_title" msgid="7377261509261811449">"<xliff:g id="APP">%1$s</xliff:g> အတွက် ‘မနှောင့်ယှက်ရ’ သုံးခွင့်ကို ပြန်ရုပ်သိမ်းမလား။"</string>
     <string name="zen_access_revoke_warning_dialog_summary" msgid="8689801842914183595">"ဤအက်ပ်က သတ်မှတ်ခဲ့သော \'မနှောင့်ယှက်ရ’ စည်းမျဉ်းအားလုံးကို ဖယ်ရှားပါမည်။"</string>
+    <!-- no translation found for zen_modes_access_warning_dialog_title (2072265702931309138) -->
+    <skip />
+    <!-- no translation found for zen_modes_access_warning_dialog_summary (2351013300727701273) -->
+    <skip />
+    <!-- no translation found for zen_modes_access_revoke_warning_dialog_title (2703602440018176310) -->
+    <skip />
+    <!-- no translation found for zen_modes_access_revoke_warning_dialog_summary (4669243849023204217) -->
+    <skip />
     <string name="ignore_optimizations_on" msgid="6865583039303804932">"သင့်မြတ်အောင် မလုပ်ပါနှင့်"</string>
     <string name="ignore_optimizations_off" msgid="9186557038453586295">"သင့်မြတ်အောင် လုပ်ကိုင်ရန်"</string>
     <string name="ignore_optimizations_on_desc" msgid="1280043916460939932">"သင့်ဘတ်ထရီကို ပိုမိုလျှင်မြန်စွာ ကုန်စေပါသည်။ အက်ပ်က နောက်ခံတွင် ဘက်ထရီအသုံးပြုနေခြင်းကို ကန့်သတ်တော့မည်မဟုတ်ပါ။"</string>
@@ -5350,7 +5388,7 @@
     <string name="audio_sharing_no_thanks_button_label" msgid="5822491984114744357">"မလိုပါ"</string>
     <string name="audio_sharing_share_with_dialog_title" msgid="3934377530640830364">"<xliff:g id="DEVICE_NAME">%1$s</xliff:g> နှင့် အသံမျှဝေမလား။"</string>
     <string name="audio_sharing_share_with_more_dialog_title" msgid="2840069088858232267">"အခြားစက်နှင့် အသံမျှဝေခြင်း"</string>
-    <string name="audio_sharing_share_with_button_label" msgid="4146194430380237357">"<xliff:g id="DEVICE_NAME">%1$s</xliff:g> ဖြင့် မျှဝေခြင်း"</string>
+    <string name="audio_sharing_share_with_button_label" msgid="4146194430380237357">"<xliff:g id="DEVICE_NAME">%1$s</xliff:g> နှင့် မျှဝေရန်"</string>
     <string name="audio_sharing_close_button_label" msgid="2666534149100498574">"ပိတ်ရန်"</string>
     <string name="audio_sharing_dialog_connect_device_content" msgid="2873230647152283734">"တွဲသုံးနိုင်သော နားကြပ်နောက်တစ်စုံကို ချိတ်ဆက်ပါ (သို့) သင့်ထုတ်လွှင့်မှု၏ အမည်နှင့် စကားဝှက်ကို အခြားပုဂ္ဂိုလ်နှင့် မျှဝေပါ"</string>
     <string name="audio_sharing_dialog_pair_device_content" msgid="3136997898244863470">"တွဲသုံးနိုင်သော နားကြပ်နောက်တစ်စုံကို တွဲချိတ်ပါ (သို့) သင့်အသံ ထုတ်လွှင့်ခြင်း QR ကုဒ်ကို အခြားပုဂ္ဂိုလ်နှင့် မျှဝေပါ"</string>
@@ -5362,7 +5400,7 @@
     <string name="audio_sharing_stop_button_label" msgid="8770519671470608849">"မျှဝေခြင်းကို ရပ်ရန်"</string>
     <string name="audio_sharing_settings_button_label" msgid="8574808650318270491">"ဆက်တင်များ"</string>
     <string name="audio_sharing_disconnect_dialog_title" msgid="2192751727237748602">"ချိတ်ဆက်မှုဖြုတ်ရန် စက်ရွေးခြင်း"</string>
-    <string name="audio_sharing_dialog_disconnect_content" msgid="3840488888970653308">"တစ်ကြိမ်လျှင် စက် ၂ ခုသာ မျှဝေနိုင်သည်"</string>
+    <string name="audio_sharing_dialog_disconnect_content" msgid="3840488888970653308">"တစ်ကြိမ်လျှင် စက် ၂ ခုသာ အသံမျှဝေနိုင်သည်"</string>
     <string name="audio_sharing_disconnect_device_button_label" msgid="4272897217708930576">"<xliff:g id="DEVICE_NAME">%1$s</xliff:g> ကို ချိတ်ဆက်မှုဖြုတ်ရန်"</string>
     <string name="audio_sharing_stop_dialog_title" msgid="4872853738164232075">"<xliff:g id="DEVICE_NAME">%1$s</xliff:g> နှင့် ချိတ်ဆက်မလား။"</string>
     <string name="audio_sharing_stop_dialog_content" msgid="6371546856710692910">"<xliff:g id="DEVICE_NAME">%1$s</xliff:g> နှင့် အသံမျှဝေခြင်းကို ရပ်ပါမည်"</string>
@@ -5397,7 +5435,7 @@
     <string name="audio_streams_no_password_summary" msgid="8976357323034830144">"စကားဝှက် မရှိပါ"</string>
     <string name="audio_streams_dialog_learn_more" msgid="6711241053442211345">"ပိုမိုလေ့လာရန်"</string>
     <string name="audio_streams_dialog_cannot_play" msgid="1358828316927479091">"ဤအသံ ထုတ်လွှင့်ခြင်းကို <xliff:g id="DEVICE_NAME">%1$s</xliff:g> တွင် ဖွင့်၍မရပါ။"</string>
-    <string name="audio_streams_listening_now" msgid="4205614429222949176">"နားထောင်ကြစို့"</string>
+    <string name="audio_streams_listening_now" msgid="4205614429222949176">"ယခုနားထောင်ရန်"</string>
     <string name="audio_streams_media_service_notification_leave_broadcast_text" msgid="4938656134300913647">"နားထောင်ခြင်း ရပ်ရန်"</string>
     <string name="audio_streams_dialog_no_le_device_title" msgid="3931163990976742282">"တွဲသုံးနိုင်သော နားကြပ်ကို ချိတ်ဆက်ခြင်း"</string>
     <string name="audio_streams_dialog_no_le_device_button" msgid="4484355549428642588">"စက်နှင့် ချိတ်ဆက်ရန်"</string>
