--- a/res/values-or/strings.xml
+++ b/res/values-or/strings.xml
@@ -374,7 +374,7 @@
     <string name="security_settings_fingerprint_enroll_introduction_footer_title_consent_1" msgid="1122676690472680734">"ଆପଣଙ୍କ ଏବଂ ଆପଣଙ୍କ ପିଲା ପାଖରେ ନିୟନ୍ତ୍ରଣ ଅଛି"</string>
     <string name="security_settings_fingerprint_enroll_introduction_footer_title_2" msgid="5663733424583416266">"ମନେ ରଖନ୍ତୁ"</string>
     <string name="security_settings_fingerprint_enroll_introduction_message_unlock_disabled" msgid="8957789840251747092">"ଫୋନକୁ ଅନଲକ କରିବା କିମ୍ୱା କ୍ରୟକୁ ଅନୁମୋଦନ କରିବା ପାଇଁ ନିଜ ଟିପଚିହ୍ନର ବ୍ୟବହାର କରନ୍ତୁ।\n\nଧ୍ୟାନଦିଅନ୍ତୁ: ଏହି ଡିଭାଇସ ଅନଲକ କରିବାକୁ ଆପଣ ଟିପଚିହ୍ନ ବ୍ୟବହାର କରିପାରିବେ ନାହିଁ। ଅଧିକ ସୂଚନା ପାଇଁ, ଆପଣଙ୍କ ସଂସ୍ଥାର ଆଡମିନଙ୍କ ସହ କଣ୍ଟାକ୍ଟ କରନ୍ତୁ।"</string>
-    <string name="security_settings_fingerprint_enroll_introduction_cancel" msgid="6086532316718920562">"ବାତିଲ"</string>
+    <string name="security_settings_fingerprint_enroll_introduction_cancel" msgid="6086532316718920562">"ବାତିଲ କରନ୍ତୁ"</string>
     <string name="security_settings_fingerprint_enroll_introduction_no_thanks" msgid="1663906389456119842">"ବର୍ତ୍ତମାନ ନୁହେଁ"</string>
     <string name="security_settings_fingerprint_enroll_introduction_agree" msgid="4068276083536421828">"ମୁଁ ରାଜି"</string>
     <string name="setup_fingerprint_enroll_skip_title" msgid="2473807887676247264">"ଟିପଚିହ୍ନ ବାଦ ଦେବେ?"</string>
@@ -411,8 +411,7 @@
     <string name="security_settings_face_watch_preference_summary" msgid="5817376447253802793">"ଫେସ ଏବଂ <xliff:g id="WATCH">%s</xliff:g> ଯୋଗ କରାଯାଇଛି"</string>
     <string name="security_settings_fingerprint_single_face_watch_preference_summary" msgid="764951912234638192">"ଫେସ, ଟିପଚିହ୍ନ ଏବଂ <xliff:g id="WATCH">%s</xliff:g> ଯୋଗ କରାଯାଇଛି"</string>
     <string name="security_settings_fingerprint_multiple_face_watch_preference_summary" msgid="3935500711366489380">"ଫେସ, ଟିପଚିହ୍ନ ଏବଂ <xliff:g id="WATCH">%s</xliff:g> ଯୋଗ କରାଯାଇଛି"</string>
-    <!-- no translation found for mandatory_biometrics_prompt_description (8928849367818726432) -->
-    <skip />
+    <string name="mandatory_biometrics_prompt_description" msgid="8928849367818726432">"ପରିଚୟ ଯାଞ୍ଚ ଚାଲୁ ଅଛି"</string>
     <string name="security_settings_remoteauth_preference_title" msgid="8319680328086089533">"ରିମୋଟ ଅଥେଣ୍ଟିକେଟର ଅନଲକ"</string>
     <string name="security_settings_remoteauth_preference_summary" msgid="1507004469316635196">"ୱାଚ ଯୋଗ କରାଯାଇଛି"</string>
     <string name="security_settings_remoteauth_enroll_introduction_title" msgid="2151004795778999671">"ଆପଣଙ୍କ ୱାଚ ସେଟ ଅପ କରନ୍ତୁ"</string>
@@ -3337,6 +3336,14 @@
     <string name="spatial_summary_on_two" msgid="4526919818832483883">"ଚାଲୁ ଅଛି / <xliff:g id="OUTPUT_DEVICE_0">%1$s</xliff:g> ଏବଂ <xliff:g id="OUTPUT_DEVICE_1">%2$s</xliff:g>"</string>
     <string name="spatial_audio_footer_title" msgid="8775010547623606088">"ଆପଣ ବ୍ଲୁଟୁଥ ଡିଭାଇସଗୁଡ଼ିକ ପାଇଁ ମଧ୍ୟ ସ୍ପେସିଆଲ ଅଡିଓକୁ ଚାଲୁ କରିପାରିବେ।"</string>
     <string name="spatial_audio_footer_learn_more_text" msgid="3826811708094366301">"କନେକ୍ଟ ହୋଇଥିବା ଡିଭାଇସଗୁଡ଼ିକର ସେଟିଂସ"</string>
+    <!-- no translation found for spatial_audio_multi_toggle_title (6175786400035541273) -->
+    <skip />
+    <!-- no translation found for spatial_audio_multi_toggle_off (2086359413991193164) -->
+    <skip />
+    <!-- no translation found for spatial_audio_multi_toggle_on (2988769235357633788) -->
+    <skip />
+    <!-- no translation found for spatial_audio_multi_toggle_head_tracking_on (861779551619033627) -->
+    <skip />
     <string name="zen_mode_settings_schedules_summary" msgid="2047688589286811617">"{count,plural, =0{କିଛି ନାହିଁ}=1{1ଟି ସିଡୁଲ୍ ସେଟ୍ ହୋଇଛି}other{#ଟି ସିଡୁଲ୍ ସେଟ୍ ହୋଇଛି}}"</string>
     <string name="zen_mode_settings_title" msgid="682676757791334259">"ବିରକ୍ତ କରନ୍ତୁ ନାହିଁ"</string>
     <string name="zen_modes_list_title" msgid="5138745349253275428">"ପ୍ରାଥମିକତା ମୋଡ"</string>
@@ -3634,7 +3641,11 @@
     <string name="nls_feature_reply_summary" msgid="4492543411395565556">"ଏହା ବିଜ୍ଞପ୍ତିଗୁଡ଼ିକୁ ସ୍ନୁଜ କିମ୍ବା ଖାରଜ କରିବା ଏବଂ କଲର ଉତ୍ତର ଦେବା ସହ ମେସେଜର ପ୍ରତ୍ୟୁତ୍ତର ଦେଇପାରିବ ଏବଂ ବିଜ୍ଞପ୍ତିଗୁଡ଼ିକରେ ଥିବା ବଟନଗୁଡ଼ିକ ଉପରେ ପଦକ୍ଷେପ ନେଇପାରିବ।"</string>
     <string name="nls_feature_settings_title" msgid="8208164329853194414">"ସେଟିଂସ ପରିବର୍ତ୍ତନ କରିବା"</string>
     <string name="nls_feature_settings_summary" msgid="3770028705648985689">"ଏହା \"ବିରକ୍ତ କରନ୍ତୁ ନାହିଁ\"କୁ ଚାଲୁ କିମ୍ବା ବନ୍ଦ କରିପାରିବ ଏବଂ ସମ୍ବନ୍ଧିତ ସେଟିଂସକୁ ପରିବର୍ତ୍ତନ କରିପାରିବ।"</string>
+    <!-- no translation found for nls_feature_modes_settings_summary (6678225711796413093) -->
+    <skip />
     <string name="notification_listener_disable_warning_summary" msgid="8373396293802088961">"ଯଦି ଆପଣ <xliff:g id="NOTIFICATION_LISTENER_NAME">%1$s</xliff:g> ପାଇଁ ବିଜ୍ଞପ୍ତି ଆକ୍ସେସକୁ ବନ୍ଦ କରୁଛନ୍ତି, ତେବେ \"ବିରକ୍ତ କରନ୍ତୁ ନାହିଁ\"ର ଆକ୍ସେସ ମଧ୍ୟ ବନ୍ଦ ହୋଇଯାଇପାରେ।"</string>
+    <!-- no translation found for notification_listener_disable_modes_warning_summary (2985662620702322307) -->
+    <skip />
     <string name="notification_listener_disable_warning_confirm" msgid="841492108402184976">"ବନ୍ଦ କରନ୍ତୁ"</string>
     <string name="notification_listener_disable_warning_cancel" msgid="8802784105045594324">"ବାତିଲ କରନ୍ତୁ"</string>
     <string name="notif_type_ongoing" msgid="135675014223627555">"ରିଅଲ-ଟାଇମ"</string>
@@ -3695,6 +3706,12 @@
     <string name="manage_zen_access_title" msgid="1562322900340107269">"ବିରକ୍ତ କରନ୍ତୁ ନାହିଁ ଆକ୍ସେସକୁ ଚାଲୁ କରନ୍ତୁ"</string>
     <string name="zen_access_detail_switch" msgid="4183681772666138993">"\"ବିରକ୍ତ କରନ୍ତୁ ନାହିଁ\"କୁ ଅନୁମତି ଦିଅନ୍ତୁ"</string>
     <string name="zen_access_empty_text" msgid="3779921853282293080">"ବ୍ୟସ୍ତ କରନ୍ତୁ ନାହିଁ ଆକ୍ସେସ୍‌ କୌଣସି ସଂସ୍ଥାପିତ ଆପ୍‌ଗୁଡ଼ିକ ଅନୁରୋଧ କରିନାହାଁନ୍ତି"</string>
+    <!-- no translation found for manage_zen_modes_access_title (7568322052929075783) -->
+    <skip />
+    <!-- no translation found for zen_modes_access_detail_switch (19797205786545052) -->
+    <skip />
+    <!-- no translation found for zen_modes_access_empty_text (6393146155692575897) -->
+    <skip />
     <string name="app_notifications_off_desc" msgid="2484843759466874201">"ଆପଣ ଏହି ଆପରୁ ବିଜ୍ଞପ୍ତିଗୁଡ଼ିକୁ ଅନୁମତି ଦେଇନାହାଁନ୍ତି"</string>
     <string name="channel_notifications_off_desc" msgid="6202042207121633488">"ଆପଣଙ୍କ ଅନୁରୋଧରେ, ବିଜ୍ଞପ୍ତିଗୁଡ଼ିକର ଏହି ବର୍ଗକୁ ଏହି ଡିଭାଇସରେ ଦେଖାଯିବାରେ Android ବ୍ଲକ କରୁଛି"</string>
     <string name="channel_group_notifications_off_desc" msgid="9096417708500595424">"ଆପଣଙ୍କ ଅନୁରୋଧରେ, Android, ବିଜ୍ଞପ୍ତିଗୁଡିର ଏହି ଗୋଷ୍ଠୀକୁ ଏହି ଡିଭାଇସରେ ଦେଖାଦେବାରେ ଅବରୋଧ କରୁଛି"</string>
@@ -3877,6 +3894,22 @@
     <string name="zen_mode_blurb_theater" msgid="2999237960059524225">"ଏକ ଶାନ୍ତ ପରିବେଶ ପାଇଁ ସମସ୍ତ ବିଭ୍ରାନ୍ତିକୁ ଦୂର କରନ୍ତୁ"</string>
     <string name="zen_mode_blurb_managed" msgid="5473921634985032149">"ବିଭିନ୍ନ ୟୁଜରଙ୍କ ପାଇଁ ଡିଭାଇସ ଅନୁଭୂତି ଏବଂ ସେଟିଂସକୁ ପର୍ସନାଲାଇଜ କରନ୍ତୁ"</string>
     <string name="zen_mode_blurb_generic" msgid="3041601339807075625">"କେବଳ ଗୁରୁତ୍ୱପୂର୍ଣ୍ଣ ଲୋକ ଏବଂ ଆପ୍ସକୁ ଆପଣଙ୍କ ସହ ଯୋଗାଯୋଗ କରିବାକୁ ଅନୁମତି ଦେଇ ବାଧାକୁ କମ କରନ୍ତୁ"</string>
+    <!-- no translation found for zen_mode_inspiration_schedule_time (5596540503159096153) -->
+    <skip />
+    <!-- no translation found for zen_mode_inspiration_schedule_calendar (3678727180860212700) -->
+    <skip />
+    <!-- no translation found for zen_mode_inspiration_bedtime (6294822414181670666) -->
+    <skip />
+    <!-- no translation found for zen_mode_inspiration_driving (8237825783857483135) -->
+    <skip />
+    <!-- no translation found for zen_mode_inspiration_immersive (4062437428955782933) -->
+    <skip />
+    <!-- no translation found for zen_mode_inspiration_theater (9194190183262761230) -->
+    <skip />
+    <!-- no translation found for zen_mode_inspiration_managed (4607010392213773917) -->
+    <skip />
+    <!-- no translation found for zen_mode_inspiration_generic (9072064817144550243) -->
+    <skip />
     <string name="warning_button_text" msgid="1274234338874005639">"ଚେତାବନୀ"</string>
     <string name="suggestion_button_close" msgid="6865170855573283759">"ବନ୍ଦ କରନ୍ତୁ"</string>
     <string name="device_feedback" msgid="5351614458411688608">"ଏହି ଡିଭାଇସ ବିଷୟରେ ମତାମତ ପଠାନ୍ତୁ"</string>
@@ -4077,6 +4110,14 @@
     <string name="zen_access_disabled_package_warning" msgid="6565908224294537889">"ନିଶ୍ଚିତ ଭାବେ ଚାଲୁଥିବା ଦରକାର କାରଣ ବିଜ୍ଞପ୍ତି ଆକ୍ସେସ୍‌ ଅନ୍‌ ଅଛି"</string>
     <string name="zen_access_revoke_warning_dialog_title" msgid="7377261509261811449">"<xliff:g id="APP">%1$s</xliff:g> ପାଇଁ \"ବିରକ୍ତ କରନ୍ତୁ ନାହିଁ\" ଆକ୍‌ସେସ୍‌ ରଦ୍ଦ କରିବେ?"</string>
     <string name="zen_access_revoke_warning_dialog_summary" msgid="8689801842914183595">"ଏହି ଆପ୍‌ ଦ୍ୱାରା, \"ବିରକ୍ତ କରନ୍ତୁ ନାହିଁ\" ପାଇଁ କରାଯାଇଥିବା ସମସ୍ତ ନିୟମ କାଢ଼ିଦିଆଯିବ।"</string>
+    <!-- no translation found for zen_modes_access_warning_dialog_title (2072265702931309138) -->
+    <skip />
+    <!-- no translation found for zen_modes_access_warning_dialog_summary (2351013300727701273) -->
+    <skip />
+    <!-- no translation found for zen_modes_access_revoke_warning_dialog_title (2703602440018176310) -->
+    <skip />
+    <!-- no translation found for zen_modes_access_revoke_warning_dialog_summary (4669243849023204217) -->
+    <skip />
     <string name="ignore_optimizations_on" msgid="6865583039303804932">"ଅନୁକୁଳ କରନାହିଁ"</string>
     <string name="ignore_optimizations_off" msgid="9186557038453586295">"ଅପ୍ଟିମାଇଜ୍ କରନ୍ତୁ"</string>
     <string name="ignore_optimizations_on_desc" msgid="1280043916460939932">"ଆପଣଙ୍କ ବ୍ୟାଟେରୀ ଖୁବ୍ ଶୀଘ୍ର ସରିଯାଇପାରେ। ବ୍ୟାକଗ୍ରାଉଣ୍ଡ ବ୍ୟାଟେରୀକୁ ବ୍ୟବହାର କରିବା ପାଇଁ ଆଉ ଆପ୍‍କୁ ବାଧା ଦେଇହେବ ନାହିଁ।"</string>
@@ -4906,7 +4947,7 @@
     <string name="error_capturing_system_heap_dump_message" msgid="2352983250048200052">"ସିଷ୍ଟମ୍ ହିପ୍ ଡମ୍ପ୍ କ୍ୟାପଚର୍ ହେଲାନାହିଁ"</string>
     <string name="automatic_system_heap_dump_title" msgid="4093306504711109479">"ସ୍ବଚାଳିତ ଭାବେ ସିଷ୍ଟମ୍ ହିପ୍ ଡମ୍ପ କ୍ୟାପ୍‌ଚର୍ କରନ୍ତୁ"</string>
     <string name="automatic_system_heap_dump_summary" msgid="4060846186592886986">"ଯେତେବେଳେ Android ସିଷ୍ଟମ୍ ଅଧିକ ମେମୋରୀ ବ୍ୟବହାର କରେ, ସେତେବେଳେ ଏଥି ପାଇଁ ସ୍ବଚାଳିତ ଭାବେ ଏକ ହେଡ୍ ଡମ୍ପ କ୍ୟାପ୍ଚର୍ କରନ୍ତୁ"</string>
-    <string name="wifi_disconnect_button_text" msgid="5698154296678571998">"ବିଚ୍ଛିନ୍ନ କରନ୍ତୁ"</string>
+    <string name="wifi_disconnect_button_text" msgid="5698154296678571998">"ଡିସକନେକ୍ଟ କରନ୍ତୁ"</string>
     <string name="wfc_disclaimer_emergency_limitation_title_text" msgid="8276287227589397162">"ଜରୁରୀକାଳୀନ କଲ୍"</string>
     <string name="wfc_disclaimer_emergency_limitation_desc_text" msgid="5503902001191552196">"ଆପଣଙ୍କ ବାହକ ଦ୍ୱାରା ୱାଇ-ଫାଇ କଲିଂରେ ଜରୁରୀକାଳୀନ କଲ୍ ଉପଲବ୍ଧ ନାହିଁ।\nଏକ ଜରୁରୀକାଳୀନ କଲ୍ କରିବାକୁ ଡିଭାଇସ୍ ସ୍ୱଚାଳିତ ଭାବେ ମୋବାଇଲ୍ ନେଟ୍‌ୱାର୍କକୁ ପରିବର୍ତ୍ତନ ହୋଇଥାଏ।\nଜରୁରୀକାଳୀନ କଲ୍ କେବଳ ମୋବାଇଲ୍ ନେଟ୍‌ୱାର୍କ ଥିବା ସ୍ଥାନଗୁଡ଼ିକରେ ସମ୍ଭବ।"</string>
     <string name="wifi_calling_summary" msgid="8566648389959032967">"କଲ୍‌ର ମାନରେ ଉନ୍ନତି ପାଇଁ ପାଇଁ ୱାଇ-ଫାଇର ବ୍ୟବହାର କରନ୍ତୁ"</string>
@@ -5365,7 +5406,7 @@
     <string name="audio_sharing_settings_button_label" msgid="8574808650318270491">"ସେଟିଂସ"</string>
     <string name="audio_sharing_disconnect_dialog_title" msgid="2192751727237748602">"ଡିସକନେକ୍ଟ କରିବାକୁ ଏକ ଡିଭାଇସ ବାଛନ୍ତୁ"</string>
     <string name="audio_sharing_dialog_disconnect_content" msgid="3840488888970653308">"ଥରକେ କେବଳ 2 ଡିଭାଇସ ଅଡିଓ ସେୟାର କରିପାରିବ"</string>
-    <string name="audio_sharing_disconnect_device_button_label" msgid="4272897217708930576">"<xliff:g id="DEVICE_NAME">%1$s</xliff:g> ବିଚ୍ଛିନ୍ନ କରନ୍ତୁ"</string>
+    <string name="audio_sharing_disconnect_device_button_label" msgid="4272897217708930576">"<xliff:g id="DEVICE_NAME">%1$s</xliff:g> ଡିସକନେକ୍ଟ କରନ୍ତୁ"</string>
     <string name="audio_sharing_stop_dialog_title" msgid="4872853738164232075">"<xliff:g id="DEVICE_NAME">%1$s</xliff:g>କୁ କନେକ୍ଟ କରିବେ?"</string>
     <string name="audio_sharing_stop_dialog_content" msgid="6371546856710692910">"ଆପଣ <xliff:g id="DEVICE_NAME">%1$s</xliff:g> ସହିତ ଅଡିଓ ସେୟାର କରିବା ବନ୍ଦ କରିବେ"</string>
     <string name="audio_sharing_stop_dialog_with_two_content" msgid="2119020725467967219">"ଆପଣ <xliff:g id="DEVICE_NAME1">%1$s</xliff:g> ଏବଂ <xliff:g id="DEVICE_NAME2">%2$s</xliff:g> ସହିତ ଅଡିଓ ସେୟାର କରିବା ବନ୍ଦ କରିବେ"</string>
