--- a/res/values-sv/strings.xml
+++ b/res/values-sv/strings.xml
@@ -411,8 +411,7 @@
     <string name="security_settings_face_watch_preference_summary" msgid="5817376447253802793">"Ansikte och <xliff:g id="WATCH">%s</xliff:g> har lagts till"</string>
     <string name="security_settings_fingerprint_single_face_watch_preference_summary" msgid="764951912234638192">"Ansikte, fingeravtryck och <xliff:g id="WATCH">%s</xliff:g> har lagts till"</string>
     <string name="security_settings_fingerprint_multiple_face_watch_preference_summary" msgid="3935500711366489380">"Ansikte, fingeravtryck och <xliff:g id="WATCH">%s</xliff:g> har lagts till"</string>
-    <!-- no translation found for mandatory_biometrics_prompt_description (8928849367818726432) -->
-    <skip />
+    <string name="mandatory_biometrics_prompt_description" msgid="8928849367818726432">"Identitetskontroll är aktiverad"</string>
     <string name="security_settings_remoteauth_preference_title" msgid="8319680328086089533">"Upplåsning med fjärrverifierare"</string>
     <string name="security_settings_remoteauth_preference_summary" msgid="1507004469316635196">"Klockan har lagts till"</string>
     <string name="security_settings_remoteauth_enroll_introduction_title" msgid="2151004795778999671">"Konfigurera klockan"</string>
@@ -3337,6 +3336,10 @@
     <string name="spatial_summary_on_two" msgid="4526919818832483883">"På/<xliff:g id="OUTPUT_DEVICE_0">%1$s</xliff:g> och <xliff:g id="OUTPUT_DEVICE_1">%2$s</xliff:g>"</string>
     <string name="spatial_audio_footer_title" msgid="8775010547623606088">"Du kan även aktivera rumsligt ljud för Bluetooth-enheter."</string>
     <string name="spatial_audio_footer_learn_more_text" msgid="3826811708094366301">"Inställningar för anslutna enheter"</string>
+    <string name="spatial_audio_multi_toggle_title" msgid="6175786400035541273">"Rumsligt ljud"</string>
+    <string name="spatial_audio_multi_toggle_off" msgid="2086359413991193164">"Av"</string>
+    <string name="spatial_audio_multi_toggle_on" msgid="2988769235357633788">"Av"</string>
+    <string name="spatial_audio_multi_toggle_head_tracking_on" msgid="861779551619033627">"Av"</string>
     <string name="zen_mode_settings_schedules_summary" msgid="2047688589286811617">"{count,plural, =0{Inga}=1{1 schema har ställts in}other{# scheman har ställts in}}"</string>
     <string name="zen_mode_settings_title" msgid="682676757791334259">"Stör ej"</string>
     <string name="zen_modes_list_title" msgid="5138745349253275428">"Prioriterade lägen"</string>
@@ -3634,7 +3637,11 @@
     <string name="nls_feature_reply_summary" msgid="4492543411395565556">"Den kan svara på meddelanden och använda åtgärdsknappar i aviseringar, inklusive att skjuta upp eller stänga aviseringar och svara på samtal."</string>
     <string name="nls_feature_settings_title" msgid="8208164329853194414">"Ändra inställningar"</string>
     <string name="nls_feature_settings_summary" msgid="3770028705648985689">"Den kan aktivera/inaktivera Stör ej och ändra relaterade inställningar."</string>
+    <!-- no translation found for nls_feature_modes_settings_summary (6678225711796413093) -->
+    <skip />
     <string name="notification_listener_disable_warning_summary" msgid="8373396293802088961">"Om du inaktiverar aviseringsåtkomst för <xliff:g id="NOTIFICATION_LISTENER_NAME">%1$s</xliff:g> kan åtkomsten till Stör ej också inaktiveras."</string>
+    <!-- no translation found for notification_listener_disable_modes_warning_summary (2985662620702322307) -->
+    <skip />
     <string name="notification_listener_disable_warning_confirm" msgid="841492108402184976">"Inaktivera"</string>
     <string name="notification_listener_disable_warning_cancel" msgid="8802784105045594324">"Avbryt"</string>
     <string name="notif_type_ongoing" msgid="135675014223627555">"Realtid"</string>
@@ -3695,6 +3702,12 @@
     <string name="manage_zen_access_title" msgid="1562322900340107269">"Stör ej-åtkomst"</string>
     <string name="zen_access_detail_switch" msgid="4183681772666138993">"Tillåt Stör ej"</string>
     <string name="zen_access_empty_text" msgid="3779921853282293080">"Inga installerade appar har begärt Stör ej-åtkomst"</string>
+    <!-- no translation found for manage_zen_modes_access_title (7568322052929075783) -->
+    <skip />
+    <!-- no translation found for zen_modes_access_detail_switch (19797205786545052) -->
+    <skip />
+    <!-- no translation found for zen_modes_access_empty_text (6393146155692575897) -->
+    <skip />
     <string name="app_notifications_off_desc" msgid="2484843759466874201">"Du har inte godkänt aviseringar från den här appen"</string>
     <string name="channel_notifications_off_desc" msgid="6202042207121633488">"På din begäran blockeras denna aviseringskategori av Android och visas inte på enheten"</string>
     <string name="channel_group_notifications_off_desc" msgid="9096417708500595424">"På din begäran blockeras denna aviseringsgrupp av Android och visas inte på enheten"</string>
@@ -3877,6 +3890,22 @@
     <string name="zen_mode_blurb_theater" msgid="2999237960059524225">"Slipp distraktioner och få en lugn miljö"</string>
     <string name="zen_mode_blurb_managed" msgid="5473921634985032149">"Anpassa inställningarna och upplevelserna på enheten för olika användare"</string>
     <string name="zen_mode_blurb_generic" msgid="3041601339807075625">"Minimera avbrott genom att bara tillåta att viktiga personer och appar når dig"</string>
+    <!-- no translation found for zen_mode_inspiration_schedule_time (5596540503159096153) -->
+    <skip />
+    <!-- no translation found for zen_mode_inspiration_schedule_calendar (3678727180860212700) -->
+    <skip />
+    <!-- no translation found for zen_mode_inspiration_bedtime (6294822414181670666) -->
+    <skip />
+    <!-- no translation found for zen_mode_inspiration_driving (8237825783857483135) -->
+    <skip />
+    <!-- no translation found for zen_mode_inspiration_immersive (4062437428955782933) -->
+    <skip />
+    <!-- no translation found for zen_mode_inspiration_theater (9194190183262761230) -->
+    <skip />
+    <!-- no translation found for zen_mode_inspiration_managed (4607010392213773917) -->
+    <skip />
+    <!-- no translation found for zen_mode_inspiration_generic (9072064817144550243) -->
+    <skip />
     <string name="warning_button_text" msgid="1274234338874005639">"Varning"</string>
     <string name="suggestion_button_close" msgid="6865170855573283759">"Stäng"</string>
     <string name="device_feedback" msgid="5351614458411688608">"Skicka feedback om den här enheten"</string>
@@ -4077,6 +4106,14 @@
     <string name="zen_access_disabled_package_warning" msgid="6565908224294537889">"Måste vara på eftersom aviseringsåtkomsten är aktiverad"</string>
     <string name="zen_access_revoke_warning_dialog_title" msgid="7377261509261811449">"Vill du återkalla åtkomstbehörigheten till Stör ej för <xliff:g id="APP">%1$s</xliff:g>?"</string>
     <string name="zen_access_revoke_warning_dialog_summary" msgid="8689801842914183595">"Alla Stör ej-regler som skapats med den här appen tas bort."</string>
+    <!-- no translation found for zen_modes_access_warning_dialog_title (2072265702931309138) -->
+    <skip />
+    <!-- no translation found for zen_modes_access_warning_dialog_summary (2351013300727701273) -->
+    <skip />
+    <!-- no translation found for zen_modes_access_revoke_warning_dialog_title (2703602440018176310) -->
+    <skip />
+    <!-- no translation found for zen_modes_access_revoke_warning_dialog_summary (4669243849023204217) -->
+    <skip />
     <string name="ignore_optimizations_on" msgid="6865583039303804932">"Optimera inte"</string>
     <string name="ignore_optimizations_off" msgid="9186557038453586295">"Optimera"</string>
     <string name="ignore_optimizations_on_desc" msgid="1280043916460939932">"Batteriet kan ta slut fortare. Appen hindras inte längre från att dra batteri i bakgrunden."</string>
@@ -5353,7 +5390,7 @@
     <string name="audio_sharing_share_with_more_dialog_title" msgid="2840069088858232267">"Dela ljud med en annan enhet"</string>
     <string name="audio_sharing_share_with_button_label" msgid="4146194430380237357">"Dela med <xliff:g id="DEVICE_NAME">%1$s</xliff:g>"</string>
     <string name="audio_sharing_close_button_label" msgid="2666534149100498574">"Stäng"</string>
-    <string name="audio_sharing_dialog_connect_device_content" msgid="2873230647152283734">"Anslut ännu ett par kompatibla hörlurar, eller dela streamens namn och lösenord med den andra personen"</string>
+    <string name="audio_sharing_dialog_connect_device_content" msgid="2873230647152283734">"Anslut ett till par kompatibla hörlurar, eller dela streamens namn och lösenord med den andra personen"</string>
     <string name="audio_sharing_dialog_pair_device_content" msgid="3136997898244863470">"Parkoppla ännu ett par kompatibla hörlurar, eller dela ljudstreamens QR-kod med den andra personen"</string>
     <string name="audio_sharing_sharing_label" msgid="1038021053061111508">"Delar ljud"</string>
     <string name="audio_sharing_pair_button_label" msgid="7987236990273083588">"Parkoppla en ny enhet"</string>
@@ -5364,7 +5401,7 @@
     <string name="audio_sharing_settings_button_label" msgid="8574808650318270491">"Inställningar"</string>
     <string name="audio_sharing_disconnect_dialog_title" msgid="2192751727237748602">"Välj en enhet att koppla ifrån"</string>
     <string name="audio_sharing_dialog_disconnect_content" msgid="3840488888970653308">"Endast två enheter kan dela ljud samtidigt"</string>
-    <string name="audio_sharing_disconnect_device_button_label" msgid="4272897217708930576">"Koppla från <xliff:g id="DEVICE_NAME">%1$s</xliff:g>"</string>
+    <string name="audio_sharing_disconnect_device_button_label" msgid="4272897217708930576">"Koppla ifrån <xliff:g id="DEVICE_NAME">%1$s</xliff:g>"</string>
     <string name="audio_sharing_stop_dialog_title" msgid="4872853738164232075">"Vill du ansluta <xliff:g id="DEVICE_NAME">%1$s</xliff:g>?"</string>
     <string name="audio_sharing_stop_dialog_content" msgid="6371546856710692910">"Du slutar dela ljud med <xliff:g id="DEVICE_NAME">%1$s</xliff:g>"</string>
     <string name="audio_sharing_stop_dialog_with_two_content" msgid="2119020725467967219">"Du slutar dela ljud med <xliff:g id="DEVICE_NAME1">%1$s</xliff:g> och <xliff:g id="DEVICE_NAME2">%2$s</xliff:g>"</string>
