--- a/res/values-ur/strings.xml
+++ b/res/values-ur/strings.xml
@@ -411,8 +411,7 @@
     <string name="security_settings_face_watch_preference_summary" msgid="5817376447253802793">"چہرہ اور <xliff:g id="WATCH">%s</xliff:g> شامل کیے گئے"</string>
     <string name="security_settings_fingerprint_single_face_watch_preference_summary" msgid="764951912234638192">"چہرہ، فنگر پرنٹ اور <xliff:g id="WATCH">%s</xliff:g> شامل کیے گئے"</string>
     <string name="security_settings_fingerprint_multiple_face_watch_preference_summary" msgid="3935500711366489380">"چہرہ، فنگر پرنٹس اور <xliff:g id="WATCH">%s</xliff:g> شامل کیے گئے"</string>
-    <!-- no translation found for mandatory_biometrics_prompt_description (8928849367818726432) -->
-    <skip />
+    <string name="mandatory_biometrics_prompt_description" msgid="8928849367818726432">"شناختی چیک آن ہے"</string>
     <string name="security_settings_remoteauth_preference_title" msgid="8319680328086089533">"‏Remote Authenticator کو غیر مقفل کریں"</string>
     <string name="security_settings_remoteauth_preference_summary" msgid="1507004469316635196">"گھڑی کو شامل کیا گیا"</string>
     <string name="security_settings_remoteauth_enroll_introduction_title" msgid="2151004795778999671">"اپنی گھڑی سیٹ اپ کریں"</string>
@@ -3337,6 +3336,10 @@
     <string name="spatial_summary_on_two" msgid="4526919818832483883">"آن / <xliff:g id="OUTPUT_DEVICE_0">%1$s</xliff:g> اور <xliff:g id="OUTPUT_DEVICE_1">%2$s</xliff:g>"</string>
     <string name="spatial_audio_footer_title" msgid="8775010547623606088">"آپ بلوٹوتھ آلات کیلئے اسپیشیئل آڈیو کو بھی آن کر سکتے ہیں۔"</string>
     <string name="spatial_audio_footer_learn_more_text" msgid="3826811708094366301">"منسلک کردہ آلات کی ترتیبات"</string>
+    <string name="spatial_audio_multi_toggle_title" msgid="6175786400035541273">"اسپیشیئل آڈیو"</string>
+    <string name="spatial_audio_multi_toggle_off" msgid="2086359413991193164">"آف ہے"</string>
+    <string name="spatial_audio_multi_toggle_on" msgid="2988769235357633788">"آف ہے"</string>
+    <string name="spatial_audio_multi_toggle_head_tracking_on" msgid="861779551619033627">"آف ہے"</string>
     <string name="zen_mode_settings_schedules_summary" msgid="2047688589286811617">"{count,plural, =0{کوئی نہیں}=1{1 شیڈول سیٹ ہے}other{# شیڈول سیٹ ہیں}}"</string>
     <string name="zen_mode_settings_title" msgid="682676757791334259">"ڈسٹرب نہ کریں"</string>
     <string name="zen_modes_list_title" msgid="5138745349253275428">"ترجیحی وضع"</string>
@@ -3634,7 +3637,11 @@
     <string name="nls_feature_reply_summary" msgid="4492543411395565556">"یہ پیغامات کا جواب دے سکتی ہے اور اطلاعات میں بٹن پر کاروائی کر سکتی ہے، بشمول اطلاعات کو اسنوز کرنا یا مسترد کرنا اور کالز کا جواب دینا۔"</string>
     <string name="nls_feature_settings_title" msgid="8208164329853194414">"آپ کی ترتیبات تبدیل کر سکے گی"</string>
     <string name="nls_feature_settings_summary" msgid="3770028705648985689">"یہ \'ڈسٹرب نہ کریں\' کو آن یا آف کر سکتی ہے اور متعلقہ ترتیبات تبدیل کر سکتی ہے۔"</string>
+    <!-- no translation found for nls_feature_modes_settings_summary (6678225711796413093) -->
+    <skip />
     <string name="notification_listener_disable_warning_summary" msgid="8373396293802088961">"اگر آپ <xliff:g id="NOTIFICATION_LISTENER_NAME">%1$s</xliff:g> کیلئے اطلاع کی رسائی آف کرتے ہیں تو ڈسٹرب نہ کریں کی رسائی بھی آف ہو سکتی ہے۔"</string>
+    <!-- no translation found for notification_listener_disable_modes_warning_summary (2985662620702322307) -->
+    <skip />
     <string name="notification_listener_disable_warning_confirm" msgid="841492108402184976">"آف کریں"</string>
     <string name="notification_listener_disable_warning_cancel" msgid="8802784105045594324">"منسوخ کریں"</string>
     <string name="notif_type_ongoing" msgid="135675014223627555">"ریئل-ٹائم"</string>
@@ -3695,6 +3702,12 @@
     <string name="manage_zen_access_title" msgid="1562322900340107269">"ڈسٹرب نہ کریں تک رسائی"</string>
     <string name="zen_access_detail_switch" msgid="4183681772666138993">"\'ڈسٹرب نہ کریں\' کو اجازت دیں"</string>
     <string name="zen_access_empty_text" msgid="3779921853282293080">"کسی انسٹال کردہ ایپس نے ڈسٹرب نہ کریں تک رسائی کی درخواست نہیں کی ہے"</string>
+    <!-- no translation found for manage_zen_modes_access_title (7568322052929075783) -->
+    <skip />
+    <!-- no translation found for zen_modes_access_detail_switch (19797205786545052) -->
+    <skip />
+    <!-- no translation found for zen_modes_access_empty_text (6393146155692575897) -->
+    <skip />
     <string name="app_notifications_off_desc" msgid="2484843759466874201">"آپ نے اس ایپ سے اطلاعات کی اجازت نہیں دی ہے"</string>
     <string name="channel_notifications_off_desc" msgid="6202042207121633488">"‏آپ کی درخواست پر، Android اطلاعات کے اس زمرے کو اس آلہ پر ظاہر ہونے سے مسدود کررہا ہے"</string>
     <string name="channel_group_notifications_off_desc" msgid="9096417708500595424">"‏آپ کی درخواست پر، Android اطلاعات کے اس گروپ کو اس آلہ پر ظاہر ہونے سے مسدود کر رہا ہے"</string>
@@ -3877,6 +3890,22 @@
     <string name="zen_mode_blurb_theater" msgid="2999237960059524225">"پرسکون ماحول کے لیے تمام خلفشار کو ختم کریں"</string>
     <string name="zen_mode_blurb_managed" msgid="5473921634985032149">"مختلف صارفین کے لیے آلہ کے تجربات اور ترتیبات کو ذاتی نوعیت کا بنائیں"</string>
     <string name="zen_mode_blurb_generic" msgid="3041601339807075625">"صرف اہم لوگوں اور ایپس کو آپ تک رسائی کی اجازت دے کر رکاوٹوں کو کم کریں"</string>
+    <!-- no translation found for zen_mode_inspiration_schedule_time (5596540503159096153) -->
+    <skip />
+    <!-- no translation found for zen_mode_inspiration_schedule_calendar (3678727180860212700) -->
+    <skip />
+    <!-- no translation found for zen_mode_inspiration_bedtime (6294822414181670666) -->
+    <skip />
+    <!-- no translation found for zen_mode_inspiration_driving (8237825783857483135) -->
+    <skip />
+    <!-- no translation found for zen_mode_inspiration_immersive (4062437428955782933) -->
+    <skip />
+    <!-- no translation found for zen_mode_inspiration_theater (9194190183262761230) -->
+    <skip />
+    <!-- no translation found for zen_mode_inspiration_managed (4607010392213773917) -->
+    <skip />
+    <!-- no translation found for zen_mode_inspiration_generic (9072064817144550243) -->
+    <skip />
     <string name="warning_button_text" msgid="1274234338874005639">"وارننگ"</string>
     <string name="suggestion_button_close" msgid="6865170855573283759">"بند کریں"</string>
     <string name="device_feedback" msgid="5351614458411688608">"اس آلہ کے بارے میں تاثرات بھیجیں"</string>
@@ -4077,6 +4106,14 @@
     <string name="zen_access_disabled_package_warning" msgid="6565908224294537889">"آن رہنا چاہئیے کیونکہ اطلاع کی رسائی آن ہے"</string>
     <string name="zen_access_revoke_warning_dialog_title" msgid="7377261509261811449">"<xliff:g id="APP">%1$s</xliff:g> کیلئے \'ڈسٹرب نہ کریں\' تک رسائی منسوخ کریں؟"</string>
     <string name="zen_access_revoke_warning_dialog_summary" msgid="8689801842914183595">"اس ایپ کی جانب سے تخلیق کردہ تمام \'ڈسٹرب نہ کریں\' اصول ہٹا دیے جائیں گے۔"</string>
+    <!-- no translation found for zen_modes_access_warning_dialog_title (2072265702931309138) -->
+    <skip />
+    <!-- no translation found for zen_modes_access_warning_dialog_summary (2351013300727701273) -->
+    <skip />
+    <!-- no translation found for zen_modes_access_revoke_warning_dialog_title (2703602440018176310) -->
+    <skip />
+    <!-- no translation found for zen_modes_access_revoke_warning_dialog_summary (4669243849023204217) -->
+    <skip />
     <string name="ignore_optimizations_on" msgid="6865583039303804932">"بہترین مت بنائیں"</string>
     <string name="ignore_optimizations_off" msgid="9186557038453586295">"بہترین بنائیں"</string>
     <string name="ignore_optimizations_on_desc" msgid="1280043916460939932">"ممکن ہے یہ آپ کی بیٹری مزید تیزی سے ختم کر دے۔ ایپ کو اب پس منظر میں بیٹری استعمال کرنے سے منع نہیں کیا جائے گا۔"</string>
